--- a/source/web/algemeen/etikette.html
+++ b/source/web/algemeen/etikette.html
@@ -1,73 +1,73 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="etikette">Etikette</h3>
+<html><head></head><body><div>
+<h3 id="etikette">Etikette</h3>
 <div>
 
 </div>
 
-<h4 class="sectionedit2" id="etikette_voor_dansers">Etikette voor dansers</h4>
-<div class="level4">
+<h4 id="etikette_voor_dansers">Etikette voor dansers</h4>
+<div>
 <ul>
-<li><div class="li">Sluit bij een slingerdans (an dro,hanter dro) altijd aan aan de achterkant: de voorste heeft ervoor gekozen om de slinger te gaan leiden.</div>
+<li><div>Sluit bij een slingerdans (an dro,hanter dro) altijd aan aan de achterkant: de voorste heeft ervoor gekozen om de slinger te gaan leiden.</div>
 </li>
-<li><div class="li">Houd bij vlotte paardansen (polska, polka, wals) de rand van de dansvloer vrij voor de meer ervaren paren: deze paren kunnen dan als ze snelheid willen maken de buitenbaan nemen (net als bij schaatsen).</div>
+<li><div>Houd bij vlotte paardansen (polska, polka, wals) de rand van de dansvloer vrij voor de meer ervaren paren: deze paren kunnen dan als ze snelheid willen maken de buitenbaan nemen (net als bij schaatsen).</div>
 </li>
-<li><div class="li">Houd rekening met de dansrichting, doorgaans tegen de klok in: het `hoort' nou eenmaal zo en dit is een belangrijke manier om botsingen te voorkomen.</div>
+<li><div>Houd rekening met de dansrichting, doorgaans tegen de klok in: het `hoort' nou eenmaal zo en dit is een belangrijke manier om botsingen te voorkomen.</div>
 </li>
-<li><div class="li">Kijk tijdens het dansen goed uit waar de andere dansers zijn en heengaan. De dame kan op drukke vloeren ook meekijken en de heer met haar linkerhand afremmen als dit nodig is.</div>
+<li><div>Kijk tijdens het dansen goed uit waar de andere dansers zijn en heengaan. De dame kan op drukke vloeren ook meekijken en de heer met haar linkerhand afremmen als dit nodig is.</div>
 </li>
-<li><div class="li">Is er onverhoopt toch een (kleine) botsing ontstaan biedt dan tijdens het dansen kort je excuses aan.</div>
+<li><div>Is er onverhoopt toch een (kleine) botsing ontstaan biedt dan tijdens het dansen kort je excuses aan.</div>
 </li>
-<li><div class="li">Verlaat bij een mixer (gigue, cercle) nooit alleen de dans: je ontneemt dan iemand anders de kans verder te dansen.</div>
+<li><div>Verlaat bij een mixer (gigue, cercle) nooit alleen de dans: je ontneemt dan iemand anders de kans verder te dansen.</div>
 </li>
-<li><div class="li">Niemand hoeft te wachten om gevraagd te worden. Stap gerust op iemand af.</div>
+<li><div>Niemand hoeft te wachten om gevraagd te worden. Stap gerust op iemand af.</div>
 </li>
-<li><div class="li">Word je gevraagd, maar heb je écht geen zin, of een goede reden om niet te dansen dan kun je (als je dit verontschuldigend doet) een dansaanzoek weigeren: het heeft geen zin om tegen je zin in te gaan dansen. Maar het is wel heel onbeleefd om eerst iemand te weigeren en dan vervolgens wel iemand anders te gaan dansen.</div>
+<li><div>Word je gevraagd, maar heb je écht geen zin, of een goede reden om niet te dansen dan kun je (als je dit verontschuldigend doet) een dansaanzoek weigeren: het heeft geen zin om tegen je zin in te gaan dansen. Maar het is wel heel onbeleefd om eerst iemand te weigeren en dan vervolgens wel iemand anders te gaan dansen.</div>
 </li>
-<li><div class="li">Wanneer je met elkaar danst, bedenk dat je met elkaar danst. Dus als een dame niet meteen je variaties volgt, wordt dan niet boos of ongeduldig. Het gaat gewoon even anders en niet per se fout. Je kan bovendien ook nooit met zekerheid zeggen of de fout in het volgen lag of in het aangeven. Dansen doe je samen, dus het moet ook voor allebei leuk blijven!</div>
+<li><div>Wanneer je met elkaar danst, bedenk dat je met elkaar danst. Dus als een dame niet meteen je variaties volgt, wordt dan niet boos of ongeduldig. Het gaat gewoon even anders en niet per se fout. Je kan bovendien ook nooit met zekerheid zeggen of de fout in het volgen lag of in het aangeven. Dansen doe je samen, dus het moet ook voor allebei leuk blijven!</div>
 </li>
-<li><div class="li">Houd rekening met het dansniveau van je danspartner.</div>
+<li><div>Houd rekening met het dansniveau van je danspartner.</div>
 </li>
-<li><div class="li">Gebruik je dame niet als uithangbord. Het is mooi als je veel variaties kan, maar het is niet fijn voor je dame als je die in hoog tempo allemaal laat zien…Probeer zo veel mogelijk naar de muziek te luisteren en daar je variaties op aan te passen.</div>
+<li><div>Gebruik je dame niet als uithangbord. Het is mooi als je veel variaties kan, maar het is niet fijn voor je dame als je die in hoog tempo allemaal laat zien…Probeer zo veel mogelijk naar de muziek te luisteren en daar je variaties op aan te passen.</div>
 </li>
-<li><div class="li">Het is fijn als je iemand af en toe een goede tip kan geven tijdens een bal. Hou er rekening mee dat een bal is om fijn te dansen en workshops om te leren. Overstelp daarom je danspartner nooit met een lading tips en aanwijzingen tijdens een bal…het is een dansje, geen lesje. Uiteraard kan een danspartner aangeven alle tips op prijs te stellen, maar vraag hier even naar voordat je je laat meeslepen in je enthousiasme.</div>
+<li><div>Het is fijn als je iemand af en toe een goede tip kan geven tijdens een bal. Hou er rekening mee dat een bal is om fijn te dansen en workshops om te leren. Overstelp daarom je danspartner nooit met een lading tips en aanwijzingen tijdens een bal…het is een dansje, geen lesje. Uiteraard kan een danspartner aangeven alle tips op prijs te stellen, maar vraag hier even naar voordat je je laat meeslepen in je enthousiasme.</div>
 </li>
-<li><div class="li">Voor de heren: bedank je danspartner na afloop van een dans en vraag haar om nog een dans of bied haar de rechterhand of arm om haar weer naar de rand van de dansvloer te begeleiden. Gewoon weglopen en haar laten staan is erg lomp.</div>
+<li><div>Voor de heren: bedank je danspartner na afloop van een dans en vraag haar om nog een dans of bied haar de rechterhand of arm om haar weer naar de rand van de dansvloer te begeleiden. Gewoon weglopen en haar laten staan is erg lomp.</div>
 </li>
-<li><div class="li">Weet je een andere dans op een lied dat gespeeld wordt dan die door de andere dansers wordt ingezet dan kun je best een andere dans gaan dansen, mits je de andere dansers daar natuurlijk niet bij stoort.</div>
+<li><div>Weet je een andere dans op een lied dat gespeeld wordt dan die door de andere dansers wordt ingezet dan kun je best een andere dans gaan dansen, mits je de andere dansers daar natuurlijk niet bij stoort.</div>
 </li>
-<li><div class="li">Toon de muzikanten waardering voor hun muziek met blikken tijdens het dansen en applaus achteraf, maar ook door in te spelen op de variaties in sfeer en dynamiek die ze inbrengen.</div>
+<li><div>Toon de muzikanten waardering voor hun muziek met blikken tijdens het dansen en applaus achteraf, maar ook door in te spelen op de variaties in sfeer en dynamiek die ze inbrengen.</div>
 </li>
-<li><div class="li">Hou een gewenste dansafstand aan, niet elke danspartner vindt het fijn erg close te dansen. </div>
+<li><div>Hou een gewenste dansafstand aan, niet elke danspartner vindt het fijn erg close te dansen. </div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit3" id="etikette_voor_bands">Etikette voor bands</h4>
-<div class="level4">
+<h4 id="etikette_voor_bands">Etikette voor bands</h4>
+<div>
 <ul>
-<li><div class="li">Richt je aandacht niet alleen op je medemuzikanten, maar ook op de dansers: kijk naar ze, lach naar ze, inspireer ze en laat je door ze inspireren.</div>
+<li><div>Richt je aandacht niet alleen op je medemuzikanten, maar ook op de dansers: kijk naar ze, lach naar ze, inspireer ze en laat je door ze inspireren.</div>
 </li>
-<li><div class="li">Laat bij het spelen voor niet zo ervaren dansers vrijwel altijd het basisritme doorklinken in de muziek. Ook ervaren dansers verlangen in elk geval dat het basisritme gemakkelijk vol kan worden gehouden op de muziek.</div>
+<li><div>Laat bij het spelen voor niet zo ervaren dansers vrijwel altijd het basisritme doorklinken in de muziek. Ook ervaren dansers verlangen in elk geval dat het basisritme gemakkelijk vol kan worden gehouden op de muziek.</div>
 </li>
-<li><div class="li">Wees duidelijk over de aanvang van mixers (gigue, cercle) en bourrees. Laat een eventueel intro helder overgaan in de start van het liedje.</div>
+<li><div>Wees duidelijk over de aanvang van mixers (gigue, cercle) en bourrees. Laat een eventueel intro helder overgaan in de start van het liedje.</div>
 </li>
-<li><div class="li">Speel je bij een dansuitleg wees je dan volledig bewust van je rol. De muziek moet volledig ondersteunend zijn aan het dansen. Kies de muziek daarop uit. Let op de dansdocent. Speel altijd in het tempo dat de docent aangeeft. En stop als de docent dat aangeeft. Dit zal voornamelijk met gebaren gebeuren zodat de dansers vanuit de muziek het impuls krijgen om te stoppen. Overstem de dansdocent niet in geluidsniveau. Als de samenwerking goed gaat kan de muziek zelfs bij korte stukjes (bijvoorbeeld vier maten) gespeeld worden, ook als de docent dit niet expliciet aangeeft. Het geeft sfeer tijdens de uitleg en betekenis aan de stappen. Wissel ter variatie eens van liedje als er lang wordt ingegaan op eenzelfde dans.</div>
+<li><div>Speel je bij een dansuitleg wees je dan volledig bewust van je rol. De muziek moet volledig ondersteunend zijn aan het dansen. Kies de muziek daarop uit. Let op de dansdocent. Speel altijd in het tempo dat de docent aangeeft. En stop als de docent dat aangeeft. Dit zal voornamelijk met gebaren gebeuren zodat de dansers vanuit de muziek het impuls krijgen om te stoppen. Overstem de dansdocent niet in geluidsniveau. Als de samenwerking goed gaat kan de muziek zelfs bij korte stukjes (bijvoorbeeld vier maten) gespeeld worden, ook als de docent dit niet expliciet aangeeft. Het geeft sfeer tijdens de uitleg en betekenis aan de stappen. Wissel ter variatie eens van liedje als er lang wordt ingegaan op eenzelfde dans.</div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit4" id="etikette_voor_sessiemuzikanten">Etikette voor sessiemuzikanten</h4>
-<div class="level4">
+<h4 id="etikette_voor_sessiemuzikanten">Etikette voor sessiemuzikanten</h4>
+<div>
 <ul>
-<li><div class="li">Zorg er voor tijdens een sessie dat je iedereen de ruimte geeft. Niet iedereen heeft evenveel talent en ervaring, maar als je tijdens een sessie geen kans krijgt om dat te leren, waar kan je dat dan wel.</div>
+<li><div>Zorg er voor tijdens een sessie dat je iedereen de ruimte geeft. Niet iedereen heeft evenveel talent en ervaring, maar als je tijdens een sessie geen kans krijgt om dat te leren, waar kan je dat dan wel.</div>
 </li>
-<li><div class="li">Als er een sessieleider is, luister daar dan naar!</div>
+<li><div>Als er een sessieleider is, luister daar dan naar!</div>
 </li>
-<li><div class="li">Als er veel van hetzelfde instrument aanwezig zijn, probeer dan niet steeds met z'n allen tegelijk te spelen (ik denk aan tien trekzakken of acht bodhráns…).</div>
+<li><div>Als er veel van hetzelfde instrument aanwezig zijn, probeer dan niet steeds met z'n allen tegelijk te spelen (ik denk aan tien trekzakken of acht bodhráns…).</div>
 </li>
-<li><div class="li">Luister naar wat de andere muzikanten aanbieden. Misschien is het niet wat je normaal zou doen, maar het kan toch heel waardevol zijn. </div>
+<li><div>Luister naar wat de andere muzikanten aanbieden. Misschien is het niet wat je normaal zou doen, maar het kan toch heel waardevol zijn. </div>
 </li>
 </ul>
 
