--- a/source/web/algemeen/gevraagd.html
+++ b/source/web/algemeen/gevraagd.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="gevraagd">Gevraagd</h3>
+<html><head></head><body><div>
+<h3 id="gevraagd">Gevraagd</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Op deze pagina staat een overzicht van dingen die erg fijn zouden zijn op de wik
 
 </div>
 
-<h4 class="sectionedit2" id="dansen">Dansen</h4>
-<div class="level4">
+<h4 id="dansen">Dansen</h4>
+<div>
 
 <p>
 <strong>Controleren basis</strong>
@@ -21,8 +21,8 @@ Van bijna alle dansen staat nu een basis geschreven afkomstig uit de oude DansWi
 
 </div>
 
-<h4 class="sectionedit3" id="muziek">Muziek</h4>
-<div class="level4">
+<h4 id="muziek">Muziek</h4>
+<div>
 
 <p>
 <strong>Eigenschappen dansmuziek</strong>
