--- a/source/web/dansen/bourree_du_berry_bourree_en_cercle.html
+++ b/source/web/dansen/bourree_du_berry_bourree_en_cercle.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="bourree_en_cercle">Bourree en Cercle</h3>
+<html><head></head><body><div>
+<h3 id="bourree_en_cercle">Bourree en Cercle</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ In Nederland soms ook Bourrée en Ronde genoemd. Bourréevariant die los in een 
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Iedereen staat los van elkaar in ongeveer een cirkel, het is geen rijdans dus het wordt meer een grote ring.
@@ -17,8 +17,8 @@ Iedereen staat los van elkaar in ongeveer een cirkel, het is geen rijdans dus he
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 De pas is de basispas van de bourrée, maar wel in de épaule-variant: tijdens de eerste twee passen (tel 1 tot 6) een halve draai maken naar midden cirkel, tijdens de volgende twee passen terugdraaien tot je weer in cirkel staat. In het B-deel draai je tijdens de eerste twee passen om de as (door eerst een halve draai naar het midden te maken en dan verder door te draaien) en loop je de volgende twee passen voort in de kring.
@@ -26,26 +26,26 @@ De pas is de basispas van de bourrée, maar wel in de épaule-variant: tijdens d
 
 </div>
 
-<h3 class="sectionedit4" id="tips_voor_muzikanten">Tips voor muzikanten</h3>
+<h3 id="tips_voor_muzikanten">Tips voor muzikanten</h3>
 <div>
 <ul>
-<li><div class="li">Deze dans is heerlijk om akoestisch midden op de dansvloer te spelen, aan het eind van een lang en laat optreden </div>
+<li><div>Deze dans is heerlijk om akoestisch midden op de dansvloer te spelen, aan het eind van een lang en laat optreden </div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Gonnagles in Hamburg </div>
+<li><div>Gonnagles in Hamburg </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/xhUJk05QnBQ" width="425"></iframe><ul>
-<li><div class="li">Bourree en cercle op de manier die gebruikelijk is in Frankrijk. De melodie komt van VAG. </div>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/xhUJk05QnBQ" width="425"></iframe><ul>
+<li><div>Bourree en cercle op de manier die gebruikelijk is in Frankrijk. De melodie komt van VAG. </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/DNXi_O3fe8o" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/DNXi_O3fe8o" width="425"></iframe>
 </div>
 
 </div>
