--- a/source/web/dansen/bourree_du_berry_la_grande_potterie.html
+++ b/source/web/dansen/bourree_du_berry_la_grande_potterie.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="la_grande_potterie">La grande potterie</h3>
+<html><head></head><body><div>
+<h3 id="la_grande_potterie">La grande potterie</h3>
 <div>
 
 <p>
@@ -12,8 +12,8 @@ Bourrée tournante des Grandes Poteries (het is de naam van een dorpje, vandaar 
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Basisvariant: in koppels, verspreid over de dansvloer, los van elkaar, naast elkaar alsof je elkaar in een kring achtervolgt. De koppels staan met de rechterschouder bijna tegen elkaar. Het is ook heel goed mogelijk om de bourrée met twee paren te dansen!
@@ -22,11 +22,11 @@ Basisvariant: in koppels, verspreid over de dansvloer, los van elkaar, naast elk
 <p>
 Kijk naar dit geweldige paar, dat uit het dorp Grandes Poteries komt!!!
 </p>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/7hqgbkhjFXE" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/7hqgbkhjFXE" width="425"></iframe>
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 A-deel:
@@ -51,7 +51,7 @@ Aanwijzingen
 
 </div>
 
-<h3 class="sectionedit4" id="tips_voor_muzikanten">Tips voor muzikanten</h3>
+<h3 id="tips_voor_muzikanten">Tips voor muzikanten</h3>
 <div>
 
 <p>
@@ -60,13 +60,13 @@ Deze dans wordt in principe alleen op deze melodie uit de Berry gedanst.
 
 </div>
 
-<h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Matres &amp; P in Muiderpoort </div>
+<li><div>Matres &amp; P in Muiderpoort </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/gO5p1dQX99A" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/gO5p1dQX99A" width="425"></iframe>
 </div>
 
 </div>
