--- a/source/web/dansen/hanter_dro_hanter-dro_klamm.html
+++ b/source/web/dansen/hanter_dro_hanter-dro_klamm.html
@@ -1,24 +1,24 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="hanter_dro_klamm">Hanter Dro Klamm</h3>
+<html><head></head><body><div>
+<h3 id="hanter_dro_klamm">Hanter Dro Klamm</h3>
 <div>
 
 <p>
-Een variant van de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" title="nl:dansen:hanter_dro">Hanter Dro</a>.
+Een variant van de <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" title="nl:dansen:hanter_dro">Hanter Dro</a>.
 </p>
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
-Zie <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" title="nl:dansen:hanter_dro">Hanter Dro</a>
+Zie <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕hanter_dro﹕hanter-dro_klamm.html" title="nl:dansen:hanter_dro">Hanter Dro</a>
 </p>
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 Een variant van de Hanter Dro waarbij je af en toe één tel helemaal stilstaat aan het einde van een muziek maat. Daarna ga je gewoon weer verder (met links opzij)
@@ -26,27 +26,27 @@ Een variant van de Hanter Dro waarbij je af en toe één tel helemaal stilstaat 
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
-<ul>
-<li><div class="li">Je hoort deze “pauze” in de muziek (als het goed is …) en moet dus wat beter luisteren. </div>
-</li>
-</ul>
-
-</div>
-
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
-<ul>
-<li><div class="li">Het is toegestaan om een brul te slaken (tekst suggestie: “Hee!”) op de pauze. </div>
-</li>
-</ul>
-
-</div>
-
-<h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h4 id="aanwijzingen">Aanwijzingen</h4>
 <div>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/XyYs53rtXkY" width="425"></iframe>
+<ul>
+<li><div>Je hoort deze “pauze” in de muziek (als het goed is …) en moet dus wat beter luisteren. </div>
+</li>
+</ul>
+
+</div>
+
+<h4 id="variaties">Variaties</h4>
+<div>
+<ul>
+<li><div>Het is toegestaan om een brul te slaken (tekst suggestie: “Hee!”) op de pauze. </div>
+</li>
+</ul>
+
+</div>
+
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<div>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/XyYs53rtXkY" width="425"></iframe>
 </div>
 
 </div>
