--- a/source/web/dansen/horo.html
+++ b/source/web/dansen/horo.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="horo">Horo</h3>
+<html><head></head><body><div>
+<h3 id="horo">Horo</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Dit is een tamelijk snelle dans.
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Iedereen in 1 of meerdere cirkels of rijen.
@@ -17,23 +17,23 @@ Iedereen in 1 of meerdere cirkels of rijen.
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 <ul>
-<li><div class="li">Kruisstap naar rechts met de linkervoet </div>
+<li><div>Kruisstap naar rechts met de linkervoet </div>
 </li>
-<li><div class="li">Stap naar rechts met de rechtervoet </div>
+<li><div>Stap naar rechts met de rechtervoet </div>
 </li>
-<li><div class="li">Schop naar rechts met de linkervoet </div>
+<li><div>Schop naar rechts met de linkervoet </div>
 </li>
-<li><div class="li">Schop naar links met de rechtervoet </div>
+<li><div>Schop naar links met de rechtervoet </div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit4" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h4>
-<div class="level4">
+<h4 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h4>
+<div>
 
 <p>
 Deze dans past op bijvoorbeeld de Witches Brew van Omnia. 
