--- a/source/web/dansen/kost_ar_c_hoat.html
+++ b/source/web/dansen/kost_ar_c_hoat.html
@@ -1,21 +1,21 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
-<h3 class="sectionedit1" id="kost_ar_c_hoat">Kost ar C'hoat</h3>
+<div>
+<h3 id="kost_ar_c_hoat">Kost ar C'hoat</h3>
 <div>
 
 </div>
 
-<h3 class="sectionedit2" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Initiation Kost ar C'hoat (instructie)</div>
+<li><div>Initiation Kost ar C'hoat (instructie)</div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/fUTWJGoBXqo" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/fUTWJGoBXqo" width="425"></iframe>
 </div>
 
 </div>
