--- a/source/web/dansen/laride.html
+++ b/source/web/dansen/laride.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="laride">Laride</h3>
+<html><head></head><body><div>
+<h3 id="laride">Laride</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Er is nog geen omschrijving toegevoegd
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 In 1 of meerdere lange slierten.
@@ -17,29 +17,29 @@ In 1 of meerdere lange slierten.
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 </div>
 
 <h5 id="voeten">Voeten</h5>
 <div>
 <ol>
-<li><div class="li">Stap naar links</div>
+<li><div>Stap naar links</div>
 </li>
-<li><div class="li">Aansluitpas</div>
+<li><div>Aansluitpas</div>
 </li>
-<li><div class="li">Stap naar links</div>
+<li><div>Stap naar links</div>
 </li>
-<li><div class="li">Aansluitpas</div>
+<li><div>Aansluitpas</div>
 </li>
-<li><div class="li">Op de tippen gaan staan</div>
+<li><div>Op de tippen gaan staan</div>
 </li>
-<li><div class="li">Terug neerkomen</div>
+<li><div>Terug neerkomen</div>
 </li>
-<li><div class="li">Op de tippen gaan staan, gewicht vooral op rechter voet</div>
+<li><div>Op de tippen gaan staan, gewicht vooral op rechter voet</div>
 </li>
-<li><div class="li">Terug neerzetten, en linkervoet vrijmaken</div>
+<li><div>Terug neerzetten, en linkervoet vrijmaken</div>
 </li>
 </ol>
 
@@ -48,46 +48,46 @@ In 1 of meerdere lange slierten.
 <h5 id="armen">Armen</h5>
 <div>
 <ol>
-<li><div class="li">Gestrekt naar voor, 45 graden</div>
+<li><div>Gestrekt naar voor, 45 graden</div>
 </li>
-<li><div class="li">Terug neer, langs het lichaam</div>
+<li><div>Terug neer, langs het lichaam</div>
 </li>
-<li><div class="li">Gestrekt naar voor, 45 graden</div>
+<li><div>Gestrekt naar voor, 45 graden</div>
 </li>
-<li><div class="li">Voorarmen horizontaal, ellebogen naast het lichaam</div>
+<li><div>Voorarmen horizontaal, ellebogen naast het lichaam</div>
 </li>
-<li><div class="li">Handen naar voor duwen, tot de armen gestrekt zijn.</div>
+<li><div>Handen naar voor duwen, tot de armen gestrekt zijn.</div>
 </li>
-<li><div class="li">Voorarmen horizontaal, ellebogen naast het lichaam</div>
+<li><div>Voorarmen horizontaal, ellebogen naast het lichaam</div>
 </li>
-<li><div class="li">Handen naar voor duwen, tot de armen gestrekt zijn.</div>
+<li><div>Handen naar voor duwen, tot de armen gestrekt zijn.</div>
 </li>
-<li><div class="li">Armen neer, langs het lichaam</div>
+<li><div>Armen neer, langs het lichaam</div>
 </li>
 </ol>
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 
 <p>
-Zie <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro">An Dro</a>
+Zie <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕an_dro.html" title="nl:dansen:an_dro">An Dro</a>
 </p>
 
 </div>
 
-<h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Laridé 8 temps </div>
+<li><div>Laridé 8 temps </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/4mZwUelKKw0" width="425"></iframe><ul>
-<li><div class="li">Filmpje van Boombalfestival 2009 (muzikant onbekend) (opgenomen door Herman Horsten, <a class="urlextern" href="http://www.hermanhorsten.be/" rel="nofollow" title="http://www.hermanhorsten.be">www.hermanhorsten.be</a>):</div>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/4mZwUelKKw0" width="425"></iframe><ul>
+<li><div>Filmpje van Boombalfestival 2009 (muzikant onbekend) (opgenomen door Herman Horsten, <a href="http://www.hermanhorsten.be/" rel="nofollow" title="http://www.hermanhorsten.be">www.hermanhorsten.be</a>):</div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/aEqJLL9o60U" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/aEqJLL9o60U" width="425"></iframe>
 </div>
 
 </div>
