--- a/source/web/dansen/plinn.html
+++ b/source/web/dansen/plinn.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="plinn">Plinn</h3>
+<html><head></head><body><div>
+<h3 id="plinn">Plinn</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Bretons springen tot je er bij neervalt
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 In kringen of slierten, houding zoals bij hanter dro. Afwisselend man - vrouw (belangrijk voor het tweede deel)
@@ -17,14 +17,14 @@ In kringen of slierten, houding zoals bij hanter dro. Afwisselend man - vrouw (b
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 Een volledige suite bestaat uit drie delen. Buiten Bretagne speelt men wel eens enkel deel 1 of deel 3.
 </p>
 <ul>
-<li><div class="li">Deel 1 (ton simple) en 3 (ton double): </div>
+<li><div>Deel 1 (ton simple) en 3 (ton double): </div>
 </li>
 </ul>
 
@@ -40,7 +40,7 @@ Het ritme is: lang/lang/kort kort/lang.
 Vooral deel 3 wordt vaak heel erg lang gespeeld, tot je erbij neervalt of in trance bent.
 </p>
 <ul>
-<li><div class="li">Deel 2 (bal) </div>
+<li><div>Deel 2 (bal) </div>
 </li>
 </ul>
 
@@ -48,7 +48,7 @@ Vooral deel 3 wordt vaak heel erg lang gespeeld, tot je erbij neervalt of in tra
 Dient als verademing. In koppel tegen de dansrichting in. Gekruist armen voor. Opstelling zoals bij de gigue. De muziek bestaat uit de afwisseling van een traag en een snel deel (aantal maten verschilt al naargelang de melodie en de voorkeur van de groep)
 </p>
 <ul>
-<li><div class="li">Traag deel: </div>
+<li><div>Traag deel: </div>
 </li>
 </ul>
 
@@ -56,7 +56,7 @@ Dient als verademing. In koppel tegen de dansrichting in. Gekruist armen voor. O
 Wandel langzaam tegen de klok in de kring rond. Armen bewegen daarbij ritmisch naar voor en naar achter.
 </p>
 <ul>
-<li><div class="li">Snel deel: </div>
+<li><div>Snel deel: </div>
 </li>
 </ul>
 
@@ -66,8 +66,8 @@ Zelfde pas als in deel 1 en 3. Maar nu in koppel. Eerste sprong naar links, tijd
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 
 <p>
 Bretoense dansen halen hun energie altijd uit de grond. Er wordt niet hoog gesprongen (hoofden blijven vrij vlak). Als je dicht bij elkaar staat en elkaar goed ondersteunt, kan je de sprongen eindeloos lang volhouden: je geeft energie aan elkaar.
@@ -75,8 +75,8 @@ Bretoense dansen halen hun energie altijd uit de grond. Er wordt niet hoog gespr
 
 </div>
 
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
+<h4 id="variaties">Variaties</h4>
+<div>
 
 <p>
 Tijdens deel 1 en 3: allerlei mogelijke versieringen in het benenwerk tijdens de sprongen. Zolang je maar in het basisritme blijft en de groepsenergie niet verstoort.
