--- a/source/web/dansen/polska.html
+++ b/source/web/dansen/polska.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="polska">Polska</h3>
+<html><head></head><body><div>
+<h3 id="polska">Polska</h3>
 <div>
 
 <p>
@@ -8,7 +8,7 @@ De polska is een van origine Zweedse dans. Er zijn hiervan vele variaties waarbi
 
 </div>
 
-<h3 class="sectionedit2" id="bingsjoe">Bingsjö</h3>
+<h3 id="bingsjoe">Bingsjö</h3>
 <div>
 
 <p>
@@ -17,8 +17,8 @@ Bingsjö de polska variant die in Nederland het meest gedanst wordt en hier dan 
 
 </div>
 
-<h4 class="sectionedit3" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 In deel A sta je zij aan zij, de “dame” legt haar linkerhand op de rechterschouder van de “heer” en de “heer” legt zijn rechterarm om de taille van de “dame”
@@ -30,8 +30,8 @@ In deel B sta je in gesloten danshouding.
 
 </div>
 
-<h4 class="sectionedit4" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 De muziek is in driekwartsmaat.
@@ -51,8 +51,8 @@ Deel A en B zijn niet vast te stellen in aantal maten of tellen; soms hoor je du
 
 </div>
 
-<h4 class="sectionedit5" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 
 <p>
 Om de stappen in het draai-gedeelte goed onder de knie te krijgen, is het nuttig om het eerst individueel te oefenen, waarbij je al wel om een denkbeeldige partner heen draait. 
@@ -60,8 +60,8 @@ Om de stappen in het draai-gedeelte goed onder de knie te krijgen, is het nuttig
 
 </div>
 
-<h4 class="sectionedit6" id="variaties">Variaties</h4>
-<div class="level4">
+<h4 id="variaties">Variaties</h4>
+<div>
 
 </div>
 
@@ -76,27 +76,27 @@ Bij bakmes draai je linksom in plaats van rechtsom. (Betere uitleg gewenst.)
 Andere vormen van polska's of afgeleiden hiervan (op basis van muziek en/of de dans) zijn:
 </p>
 <ul>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕boda.html" rel="nofollow" title="nl:dansen:polska:boda">Boda</a></div>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕boda.html" rel="nofollow" title="nl:dansen:polska:boda">Boda</a></div>
 </li>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕springlek.html" rel="nofollow" title="nl:dansen:polska:springlek">Springlek</a></div>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕springlek.html" rel="nofollow" title="nl:dansen:polska:springlek">Springlek</a></div>
 </li>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:slaengpolska">Slängpolska</a></div>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:slaengpolska">Slängpolska</a></div>
 </li>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:finnskogpols">Finnskogpols</a></div>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕polska﹕slaengpolska.html" rel="nofollow" title="nl:dansen:polska:finnskogpols">Finnskogpols</a></div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit7" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/Cx1qx288lZI" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/Cx1qx288lZI" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit8" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="BFdances.html#polska" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polska">Celtic Bompa Polksa</a></div>
+<li><div><a href="BFdances.html#polska" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polska">Celtic Bompa Polksa</a></div>
 </li>
 </ul>
 
