--- a/source/web/dansen/rond_de_saint-vincent.html
+++ b/source/web/dansen/rond_de_saint-vincent.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="rond_de_saint-vincent">Rond de Saint-Vincent</h3>
+<html><head></head><body><div>
+<h3 id="rond_de_saint-vincent">Rond de Saint-Vincent</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Rond, en rond, en rond…
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 In een kring, met elkaars handen vast.
@@ -17,20 +17,20 @@ In een kring, met elkaars handen vast.
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 De benen:
 </p>
 <ol>
-<li><div class="li">De linkervoet naar links</div>
+<li><div>De linkervoet naar links</div>
 </li>
-<li><div class="li">De rechtervoet kruist voor de linkervoet langs</div>
+<li><div>De rechtervoet kruist voor de linkervoet langs</div>
 </li>
-<li><div class="li">De linkervoet naar links</div>
+<li><div>De linkervoet naar links</div>
 </li>
-<li><div class="li">De rechtervoet kruist achter de linkervoet langs </div>
+<li><div>De rechtervoet kruist achter de linkervoet langs </div>
 </li>
 </ol>
 
@@ -38,20 +38,20 @@ De benen:
 De armen:
 </p>
 <ol>
-<li><div class="li">Armen gestrekt opheffen, naar voren brengen, ca. 45 graden</div>
+<li><div>Armen gestrekt opheffen, naar voren brengen, ca. 45 graden</div>
 </li>
-<li><div class="li">Armen gestrekt opheffen, horizontaal</div>
+<li><div>Armen gestrekt opheffen, horizontaal</div>
 </li>
-<li><div class="li">Men plooit de armen, de ellebogen zijn langs het lichaam</div>
+<li><div>Men plooit de armen, de ellebogen zijn langs het lichaam</div>
 </li>
-<li><div class="li">Armen terug laten zakken </div>
+<li><div>Armen terug laten zakken </div>
 </li>
 </ol>
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 
 <p>
 Vooral als je heel snel wilt dansen, maximaal zes personen per kring.
@@ -59,30 +59,30 @@ Vooral als je heel snel wilt dansen, maximaal zes personen per kring.
 
 </div>
 
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
+<h4 id="variaties">Variaties</h4>
+<div>
 <ul>
-<li><div class="li">Laag bij de grond (op je hurken) dansen.</div>
+<li><div>Laag bij de grond (op je hurken) dansen.</div>
 </li>
-<li><div class="li">Héél snel rondjes draaien. Bij sommige stappen kan de hele groep van de grond komen! </div>
+<li><div>Héél snel rondjes draaien. Bij sommige stappen kan de hele groep van de grond komen! </div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Rond de Saint Vincent</div>
+<li><div>Rond de Saint Vincent</div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/UjTZ13zRNPw" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/UjTZ13zRNPw" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="Rond_de_Saint-Vincent-sur-Oust" rel="nofollow" title="http://tkpedia.tamm-kreiz.com/index.php/Rond_de_Saint-Vincent-sur-Oust">Rond de Saint Vincent-sur-Oust op TKPédia</a></div>
+<li><div><a href="Rond_de_Saint-Vincent-sur-Oust" rel="nofollow" title="http://tkpedia.tamm-kreiz.com/index.php/Rond_de_Saint-Vincent-sur-Oust">Rond de Saint Vincent-sur-Oust op TKPédia</a></div>
 </li>
 </ul>
 
