--- a/source/web/dansen/rondo.html
+++ b/source/web/dansen/rondo.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="rondo">Rondo</h3>
+<html><head></head><body><div>
+<h3 id="rondo">Rondo</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Vlotte rijdans met lekker veel vaart
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Iedereen in 1 of meerdere lange slierten, mannen/vrouwen maakt niet uit
@@ -17,16 +17,16 @@ Iedereen in 1 of meerdere lange slierten, mannen/vrouwen maakt niet uit
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 <ul>
-<li><div class="li">zij sluit zij (te beginnen met links, naar links) </div>
+<li><div>zij sluit zij (te beginnen met links, naar links) </div>
 </li>
-<li><div class="li">stap hop (op R) </div>
+<li><div>stap hop (op R) </div>
 </li>
-<li><div class="li">zij sluit zij (te beginnen met L, naar links) </div>
+<li><div>zij sluit zij (te beginnen met L, naar links) </div>
 </li>
-<li><div class="li">zij sluit zij (op de plaats, met R te beginnen) </div>
+<li><div>zij sluit zij (op de plaats, met R te beginnen) </div>
 </li>
 </ul>
 
@@ -36,22 +36,22 @@ Armzwaai van langs het lichaam naar iets omhoog op elke eerste tel van elke maat
 
 </div>
 
-<h4 class="sectionedit4" id="variaties">Variaties</h4>
-<div class="level4">
+<h4 id="variaties">Variaties</h4>
+<div>
 <ul>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rondeau_en_couple.html" rel="nofollow" title="nl:dansen:rondeau_en_couple">Rondeau en Couple</a></div>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕rondeau_en_couple.html" rel="nofollow" title="nl:dansen:rondeau_en_couple">Rondeau en Couple</a></div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Rondeau en Couple (door Bert Leemans en Jeroen Geerinck) </div>
+<li><div>Rondeau en Couple (door Bert Leemans en Jeroen Geerinck) </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/rtVukyXDG0M" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/rtVukyXDG0M" width="425"></iframe>
 </div>
 
 </div>
