--- a/source/web/dansen/wals/wals.html
+++ b/source/web/dansen/wals/wals.html
@@ -1,4 +1,4 @@
-<html><head></head><body><div class="dw-content">
+<html><head></head><body><div>
 <p>
  Wals
 </p>
@@ -7,8 +7,8 @@
 Een gevarieerde parendans
 </p>
 
-<h4 class="sectionedit1" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Je staat in half-open houding, ergens op de dansvloer. De paren die snel willen ronddraaien in de dansrichting staan aan de buitenkant, de paren die rustig aan willen doen, of mooie figuren op de plaats, staan in het midden.
@@ -16,88 +16,88 @@ Je staat in half-open houding, ergens op de dansvloer. De paren die snel willen 
 
 </div>
 
-<h4 class="sectionedit2" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 <ul>
-<li><div class="li">De vrouw spiegelt de man, dus een pas met links is voor de vrouw een pas met rechts.</div>
+<li><div>De vrouw spiegelt de man, dus een pas met links is voor de vrouw een pas met rechts.</div>
 </li>
-<li><div class="li">De eerste maat is links rechts links waarbij het zwaartepunt van het lichaam de hele maat boven het linker been blijft.</div>
+<li><div>De eerste maat is links rechts links waarbij het zwaartepunt van het lichaam de hele maat boven het linker been blijft.</div>
 </li>
-<li><div class="li">De tweede maat is rechts links rechts waarbij het zwaartepunt van het lichaam de hele maat boven het rechter been blijft.</div>
+<li><div>De tweede maat is rechts links rechts waarbij het zwaartepunt van het lichaam de hele maat boven het rechter been blijft.</div>
 </li>
-<li><div class="li">Voor de absolute basis is het prima als deze passen op de plaats worden gezet, als het gewicht per maat maar echt wordt verplaatst. </div>
+<li><div>Voor de absolute basis is het prima als deze passen op de plaats worden gezet, als het gewicht per maat maar echt wordt verplaatst. </div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit3" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 <ul>
-<li><div class="li">Er kunnen rondjes met de klok mee gedraaid worden. Dit kan gewoon heel rustig gebeuren.</div>
+<li><div>Er kunnen rondjes met de klok mee gedraaid worden. Dit kan gewoon heel rustig gebeuren.</div>
 </li>
-<li class="level1 node"><div class="li">Het is ook mogelijk om per maat een halve draai te maken.</div>
+<li class="node"><div>Het is ook mogelijk om per maat een halve draai te maken.</div>
 <ul>
-<li><div class="li">De eerste maat zet de man het linkerbeen echt om het rechterbeen van de vrouw heen, om de eerste halve draai goed te maken. De tweede maat zet de vrouw haar rechterbeen echt om het linkerbeen van de man heen, en zet deze draai dus in. Je eindigt met de vrouw aan de binnenkant, de heer aan de buitenkant.</div>
+<li><div>De eerste maat zet de man het linkerbeen echt om het rechterbeen van de vrouw heen, om de eerste halve draai goed te maken. De tweede maat zet de vrouw haar rechterbeen echt om het linkerbeen van de man heen, en zet deze draai dus in. Je eindigt met de vrouw aan de binnenkant, de heer aan de buitenkant.</div>
 </li>
-<li><div class="li">Na twee maten ben je dan helemaal rond en kun je weer opnieuw verder. Je staan nu weer met de heer aan de binnenkant, vrouw aan de buitenkant. </div>
+<li><div>Na twee maten ben je dan helemaal rond en kun je weer opnieuw verder. Je staan nu weer met de heer aan de binnenkant, vrouw aan de buitenkant. </div>
 </li>
 </ul>
 </li>
-<li><div class="li">Als je nog niet als een gek rondjes draait in de dansrichting, verplaats je dan naar het midden van de vloer. Doe dit ook als je rare figuren wil doen waardoor je even stil komt te staan </div>
-</li>
-</ul>
-
-</div>
-
-<h4 class="sectionedit4" id="variaties">Variaties</h4>
-<div class="level4">
-<ul>
-<li><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" title="nl:dansen:wals:wals_in_5_tijden">Wals in 5 tijden</a></div>
-</li>
-<li><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_7_tijden.html" title="nl:dansen:wals:wals_in_7_tijden">Wals in 7 tijden</a></div>
-</li>
-<li><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_8_tijden.html" title="nl:dansen:wals:wals_in_8_tijden">Wals in 8 tijden</a></div>
-</li>
-<li><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_11_tijden.html" title="nl:dansen:wals:wals_in_11_tijden">Wals in 11 tijden</a></div>
-</li>
-<li><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" title="nl:dansen:wals:wals_in_14_tijden">Wals in 14 tijden</a></div>
+<li><div>Als je nog niet als een gek rondjes draait in de dansrichting, verplaats je dan naar het midden van de vloer. Doe dit ook als je rare figuren wil doen waardoor je even stil komt te staan </div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit5" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h4 id="variaties">Variaties</h4>
+<div>
+<ul>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" title="nl:dansen:wals:wals_in_5_tijden">Wals in 5 tijden</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_7_tijden.html" title="nl:dansen:wals:wals_in_7_tijden">Wals in 7 tijden</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_8_tijden.html" title="nl:dansen:wals:wals_in_8_tijden">Wals in 8 tijden</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_11_tijden.html" title="nl:dansen:wals:wals_in_11_tijden">Wals in 11 tijden</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_14_tijden.html" title="nl:dansen:wals:wals_in_14_tijden">Wals in 14 tijden</a></div>
+</li>
+</ul>
+
+</div>
+
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
 
 
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/honwsw_O-W" width="425"></iframe><ul>
-<li><div class="li">Depardu (Eric Theze en Wouter Vandenabeele)</div>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/honwsw_O-W" width="425"></iframe><ul>
+<li><div>Depardu (Eric Theze en Wouter Vandenabeele)</div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/1MWgBDObNgg" width="425"></iframe><ul>
-<li><div class="li">Wals in 3</div>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/1MWgBDObNgg" width="425"></iframe><ul>
+<li><div>Wals in 3</div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/hBnAgW9KOqg" width="425"></iframe><ul>
-<li><div class="li">Ander soort wals (choreografie?) met een Fransman die laatst ook in muiderpoort was</div>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/hBnAgW9KOqg" width="425"></iframe><ul>
+<li><div>Ander soort wals (choreografie?) met een Fransman die laatst ook in muiderpoort was</div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/LeuklHmIhMU" width="425"></iframe><ul>
-<li><div class="li">Filmpje van een workshop: Bal de l'Europe 2008 “LA VALSE des BRAS” </div>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/LeuklHmIhMU" width="425"></iframe><ul>
+<li><div>Filmpje van een workshop: Bal de l'Europe 2008 “LA VALSE des BRAS” </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/QN8XqDbfbps" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/QN8XqDbfbps" width="425"></iframe>
 </div>
 
-<h3 class="sectionedit6" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="BFdances.html#5stepwaltz" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#5stepwaltz">Celtic Bompa 5-Step Waltz</a></div>
+<li><div><a href="BFdances.html#5stepwaltz" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#5stepwaltz">Celtic Bompa 5-Step Waltz</a></div>
 </li>
-<li><div class="li"><a class="urlextern" href="Zwiebo.html#zwiefacher" rel="nofollow" title="http://celticbompa.4t.com/Zwiebo.html#zwiefacher">Celtic Bompa aantekeningen zwiefacher workshop</a></div>
+<li><div><a href="Zwiebo.html#zwiefacher" rel="nofollow" title="http://celticbompa.4t.com/Zwiebo.html#zwiefacher">Celtic Bompa aantekeningen zwiefacher workshop</a></div>
 </li>
 </ul>
 
