--- a/source/web/events/boombalstage.html
+++ b/source/web/events/boombalstage.html
@@ -1,24 +1,24 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="boombal_stage">Boombal Stage</h3>
+<html><head></head><body><div>
+<h3 id="boombal_stage">Boombal Stage</h3>
 <div>
 
 <p>
-De Boombal stage wordt ieder jaar georganiseerd voor het <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalfestival.html" title="nl:event:boombalfestival">Boombal festival</a>. Tijdens deze stage wordt er in 3 niveaus les gegeven in balfolk.
+De Boombal stage wordt ieder jaar georganiseerd voor het <a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalfestival.html" title="nl:event:boombalfestival">Boombal festival</a>. Tijdens deze stage wordt er in 3 niveaus les gegeven in balfolk.
 </p>
 
 </div>
 
-<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="http://www.boombalfestival.be/stage/" rel="nofollow" title="http://www.boombalfestival.be/stage/">Officiële website</a></div>
+<li><div><a href="http://www.boombalfestival.be/stage/" rel="nofollow" title="http://www.boombalfestival.be/stage/">Officiële website</a></div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit3" id="referenties_en_bronnen">Referenties en bronnen</h4>
-<div class="level4">
+<h4 id="referenties_en_bronnen">Referenties en bronnen</h4>
+<div>
 
 </div>
 
