--- a/source/web/events/dansstage.html
+++ b/source/web/events/dansstage.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="dansstage">Dansstage</h3>
+<html><head></head><body><div>
+<h3 id="dansstage">Dansstage</h3>
 <div>
 
 <p>
@@ -11,29 +11,29 @@ Het evenement begint op vrijdagavond en eindigt zondagmiddag. Er wordt gezorgd v
 </p>
 
 <p>
-Het belangrijkste is echter de sfeer. Elk jaar voelen we ons dankbaar dat we dit evenement mogen delen met geweldige mensen en naast de fijne dansjes en heerlijke muziek, is het altijd weer een fijn weerzien. Als je niet het hele weekend kan, maar toch graag wilt genieten van de dansstage-sfeer, ben je van harte welkom om mee te dansen tijdens het bal op zaterdagavond. Dit bal is voor iedereen toegankelijk. <sup><a class="refnotes-ref note-popup" href="#refnotes:1:note1" name="refnotes:1:ref1">1)</a></sup>
+Het belangrijkste is echter de sfeer. Elk jaar voelen we ons dankbaar dat we dit evenement mogen delen met geweldige mensen en naast de fijne dansjes en heerlijke muziek, is het altijd weer een fijn weerzien. Als je niet het hele weekend kan, maar toch graag wilt genieten van de dansstage-sfeer, ben je van harte welkom om mee te dansen tijdens het bal op zaterdagavond. Dit bal is voor iedereen toegankelijk. <sup><a href="#refnotes:1:note1" name="refnotes:1:ref1">1)</a></sup>
 </p>
 
 </div>
 
-<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="http://www.dansstage.nl/" rel="nofollow" title="http://www.dansstage.nl/">Officiële website</a></div>
+<li><div><a href="http://www.dansstage.nl/" rel="nofollow" title="http://www.dansstage.nl/">Officiële website</a></div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit3" id="referenties_en_bronnen">Referenties en bronnen</h4>
-<div class="level4">
-<div class="refnotes">
+<h4 id="referenties_en_bronnen">Referenties en bronnen</h4>
+<div>
+<div>
 <hr/>
 <div class="notes">
-<div class="note justify">
-<sup><b><a class="backref" href="#refnotes:1:ref1" name="refnotes:1:note1">1)</a></b></sup>
-<span id="refnotes:1:note1:text">
-<a class="urlextern" href="http://www.dansstage.nl/nl_NL/" rel="nofollow" title="http://www.dansstage.nl/nl_NL/">www.dansstage.nl/nl_NL</a>
+<div>
+<sup><b><a href="#refnotes:1:ref1" name="refnotes:1:note1">1)</a></b></sup>
+<span>
+<a href="http://www.dansstage.nl/nl_NL/" rel="nofollow" title="http://www.dansstage.nl/nl_NL/">www.dansstage.nl/nl_NL</a>
 </span></div>
 </div>
 </div>
