--- a/source/web/events/festival_a_3temps.html
+++ b/source/web/events/festival_a_3temps.html
@@ -1,39 +1,39 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
         <div class="panel panel-default">
           <div class="page panel-body">
 
-                <div class="plugin_multilingual">
+                <div>
         <ul>
           <li>
-            <div class="li">
+            <div>
               <div class="flag_not_exists">
 
               </div>
             </div>
           </li>
           <li>
-            <div class="li">
+            <div>
 
             </div>
           </li>
           <li>
-            <div class="li">
+            <div>
 
             </div>
           </li>
           <li>
-            <div class="li">
+            <div>
 
             </div>
           </li>
           <li>
-            <div class="li">
+            <div>
 
             </div>
           </li>
           <li>
-            <div class="li">
+            <div>
 
             </div>
           </li>
@@ -41,9 +41,9 @@
       </div>
 
 
-<div class="dw-content">
+<div>
 <p>
-<a class="urlextern" href="http://festival.3temps.com/nl/home/" rel="nofollow" title="http://festival.3temps.com/nl/home/">Festifal a 3temps</a>
+<a href="http://festival.3temps.com/nl/home/" rel="nofollow" title="http://festival.3temps.com/nl/home/">Festifal a 3temps</a>
 </p>
 
 </div>
