--- a/source/web/algemeen/danshouding.html
+++ b/source/web/algemeen/danshouding.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="danshouding">Danshouding</h3>
+<html><head></head><body><div>
+<h3 id="danshouding">Danshouding</h3>
 <div>
 
 <p>
@@ -12,8 +12,8 @@ Een goede danshouding is natuurlijk belangrijk. Er zijn een paar verschillende h
 
 </div>
 
-<h4 class="sectionedit2" id="half-open">Half-open</h4>
-<div class="level4">
+<h4 id="half-open">Half-open</h4>
+<div>
 
 <p>
 Half-open houding, wat eigenlijk de standaard danshouding is. Je staat tegenover elkaar, de rechter-arm van de heer op de rug van de dame (tussen de schouderbladen, meestal op de BH-sluiting) met platte hand.
@@ -49,8 +49,8 @@ Beide partners dragen zelf hun eigen armen en laten die niet op de arm van de an
 
 </div>
 
-<h4 class="sectionedit3" id="gesloten">Gesloten</h4>
-<div class="level4">
+<h4 id="gesloten">Gesloten</h4>
+<div>
 
 <p>
 Gesloten houding, waarbij beide armen van de heer op de rug van de dame zitten. De armen van de dame rusten op of achter de schouders van de heer.
@@ -63,16 +63,16 @@ Open houding, hier moet nog een omschrijving voor komen.
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 <ul>
-<li><div class="li">Om samen te kunnen draaien in een koppeldans, is het belangrijk dat de dame licht leunt in de rechterarm van de heer. Daardoor vorm je als koppel 1 geheel en krijg je een gezamelijk zwaarte-/draaipunt. De dame moet hiervoor durven te leunen, maar de heer moet ook het vertrouwen geven dat nodig is om te durven leunen. Dit is een subtiele balans tussen tegendruk geven en tegelijkertijd laten vieren. Oefen dit vooral eens 'droog', en durf tegen elkaar te zeggen hoe het voelt of hoe het anders zou kunnen.</div>
+<li><div>Om samen te kunnen draaien in een koppeldans, is het belangrijk dat de dame licht leunt in de rechterarm van de heer. Daardoor vorm je als koppel 1 geheel en krijg je een gezamelijk zwaarte-/draaipunt. De dame moet hiervoor durven te leunen, maar de heer moet ook het vertrouwen geven dat nodig is om te durven leunen. Dit is een subtiele balans tussen tegendruk geven en tegelijkertijd laten vieren. Oefen dit vooral eens 'droog', en durf tegen elkaar te zeggen hoe het voelt of hoe het anders zou kunnen.</div>
 </li>
-<li><div class="li">De dame leunt als het ware als een plank naar achter, in de arm van de heer. dus niet met een holle rug, als een hoepeltje achterover, maar ook niet door je kont naar achter te steken.</div>
+<li><div>De dame leunt als het ware als een plank naar achter, in de arm van de heer. dus niet met een holle rug, als een hoepeltje achterover, maar ook niet door je kont naar achter te steken.</div>
 </li>
-<li><div class="li">In het stijldansen staan paren vaak tot en met de heupen tegen elkaar aangeplakt, en komt veel van het leiden ook door de heupen. Veel balfolkies hebben echter een houding waarbij wat afstand zit, en het leiden met de heupen niet werkt. Het is dan belangrijk om de rechter-arm (voor de heer) stevig te houden en deze alle bewegingen van het lichaam te laten vertalen naar de rug van de dame. Het is echt wel zo dat wanneer je leidt met je volledige lichaam en je een lichte spanning in de armen houdt de vrouw hierop kan volgen. Het is daarbij wel belangrijk dat je vanuit je bovenlichaam beweegt.</div>
+<li><div>In het stijldansen staan paren vaak tot en met de heupen tegen elkaar aangeplakt, en komt veel van het leiden ook door de heupen. Veel balfolkies hebben echter een houding waarbij wat afstand zit, en het leiden met de heupen niet werkt. Het is dan belangrijk om de rechter-arm (voor de heer) stevig te houden en deze alle bewegingen van het lichaam te laten vertalen naar de rug van de dame. Het is echt wel zo dat wanneer je leidt met je volledige lichaam en je een lichte spanning in de armen houdt de vrouw hierop kan volgen. Het is daarbij wel belangrijk dat je vanuit je bovenlichaam beweegt.</div>
 </li>
-<li><div class="li">Als een man een vrouw naar de vloer begeleidt, of bijvoorbeeld een Cercle danst, dan is de hand van de man onder. </div>
+<li><div>Als een man een vrouw naar de vloer begeleidt, of bijvoorbeeld een Cercle danst, dan is de hand van de man onder. </div>
 </li>
 </ul>
 
