--- a/source/web/algemeen/danswiki.html
+++ b/source/web/algemeen/danswiki.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="hoe_werkt_de_danswiki">Hoe werkt de DansWiki</h3>
+<html><head></head><body><div>
+<h3 id="hoe_werkt_de_danswiki">Hoe werkt de DansWiki</h3>
 <div>
 
 <p>
@@ -8,17 +8,17 @@ De DansWiki is zoals vele wiki's een online “encyclopedie”, maar dan specifi
 
 </div>
 
-<h4 class="sectionedit2" id="registreren">Registreren</h4>
-<div class="level4">
+<h4 id="registreren">Registreren</h4>
+<div>
 
 <p>
-Na het registreren moet je wachten op een mailtje met het wachtwoord om de eerste keer in te loggen. Het kan zo'n 5 minuten duren voordat het mailtje aankomt, maar mocht je hem dan alsnog niet in je inbox zien, kijk dan of hij niet in je Spam is beland en begin je vast achter je oren te krabben in de hoop uit te vinden of je wel het juiste emailadres hebt opgegeven. (Mocht het registreren echt niet lukken, neem dan even contact op met <a class="urlextern" href="" rel="nofollow" title="http://www.balfolkenschede.nl">Balfolk Enschede</a> en dan kijken zij wat er aan de hand is en aan gedaan kan worden.) Zodra je bent ingelogd met het automatisch gegenereerde wachtwoord heb je zelf de mogelijkheid dit te veranderen in iets wat beter te onthouden is.
+Na het registreren moet je wachten op een mailtje met het wachtwoord om de eerste keer in te loggen. Het kan zo'n 5 minuten duren voordat het mailtje aankomt, maar mocht je hem dan alsnog niet in je inbox zien, kijk dan of hij niet in je Spam is beland en begin je vast achter je oren te krabben in de hoop uit te vinden of je wel het juiste emailadres hebt opgegeven. (Mocht het registreren echt niet lukken, neem dan even contact op met <a href="" rel="nofollow" title="http://www.balfolkenschede.nl">Balfolk Enschede</a> en dan kijken zij wat er aan de hand is en aan gedaan kan worden.) Zodra je bent ingelogd met het automatisch gegenereerde wachtwoord heb je zelf de mogelijkheid dit te veranderen in iets wat beter te onthouden is.
 </p>
 
 </div>
 
-<h4 class="sectionedit3" id="aanpassen">Aanpassen</h4>
-<div class="level4">
+<h4 id="aanpassen">Aanpassen</h4>
+<div>
 
 <p>
 Na het registreren kun je de pagina's dus aanpassen. Dit is allemaal heel leuk en aardig, maar om het overzichtelijk te houden, is het fijn als mensen dat op dezelfde manier blijven doen. Kijk dus even qua stijl naar wat “gebruikelijk” is op de pagina's en neem dat over bij het maken van nieuwe pagina's of het aanpassen van bestaande pagina's.
@@ -30,7 +30,7 @@ Na het registreren kun je de pagina's dus aanpassen. Dit is allemaal heel leuk e
 <div>
 
 <p>
-Daarbij is het handig als je weet welke <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:syntax">syntax</a> te gebruiken. De syntax is de manier waarop je teksten zodanig in kunt voeren dat ze er ook uit komen te zien zoals je bedoelt met de juiste kopjes, linkjes e.d. De DansWiki is gebaseerd op <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:dokuwiki">DokuWiki</a>. Dit is een simpele vorm van wiki software zonder al te veel restricties en hij is vrij te gebruiken. De DokuWiki <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:syntax">syntax</a> is dan ook de syntax die je nodig hebt om hier pagina's te kunnen maken en aanpassen.
+Daarbij is het handig als je weet welke <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:syntax">syntax</a> te gebruiken. De syntax is de manier waarop je teksten zodanig in kunt voeren dat ze er ook uit komen te zien zoals je bedoelt met de juiste kopjes, linkjes e.d. De DansWiki is gebaseerd op <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:dokuwiki">DokuWiki</a>. Dit is een simpele vorm van wiki software zonder al te veel restricties en hij is vrij te gebruiken. De DokuWiki <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" title="wiki:syntax">syntax</a> is dan ook de syntax die je nodig hebt om hier pagina's te kunnen maken en aanpassen.
 </p>
 
 </div>
@@ -57,7 +57,7 @@ Wanner je andermans materiaal gebruikt op de DansWiki, controleer dan even onder
 <div>
 
 <p>
-Als je graag wilt weten welke pagina's er allemaal al zijn, kun je op de hoofdpagina kijken, maar er is een kans dat er al een pagina bestaat die daar nog helemaal niet terug is te vinden. Daarvoor kun je in de <a class="urlextern" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" rel="nofollow" title="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html">index</a> kijken, waar een zogenaamde sitemap staat van alle pagina's die er al zijn. Je kunt er ook komen door “&amp;do=index” zonder de aanhalingstekens in je adresbalk te zetten achter ongeveer elk denkbare adres waarmee je op de DansWiki aanwezig bent.
+Als je graag wilt weten welke pagina's er allemaal al zijn, kun je op de hoofdpagina kijken, maar er is een kans dat er al een pagina bestaat die daar nog helemaal niet terug is te vinden. Daarvoor kun je in de <a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html" rel="nofollow" title="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danswiki.html">index</a> kijken, waar een zogenaamde sitemap staat van alle pagina's die er al zijn. Je kunt er ook komen door “&amp;do=index” zonder de aanhalingstekens in je adresbalk te zetten achter ongeveer elk denkbare adres waarmee je op de DansWiki aanwezig bent.
 </p>
 
 </div>
@@ -66,26 +66,26 @@ Als je graag wilt weten welke pagina's er allemaal al zijn, kun je op de hoofdpa
 <div>
 
 <p>
-De DansWiki heeft de mogelijkheid om per pagina te kijken naar de recente wijzigingen. Dit doe je door via het menu bovenin naar “Recente aanpassingen” te gaan of door “&amp;do=recent” zonder aanhalingstekens achter de <abbr title="Uniform Resource Locator">URL</abbr> van de pagina te plakken. Er is ook een pagina waarmee je alle recente aanpassingen van over de hele DansWiki kunt zien. Deze vindt je of via de hiervoor genoemde pagina of je kunt er direct naartoe gaan via <a class="urlextern" href="doku.php﹖id=doku.php﹖id=nl﹕start.html" rel="nofollow" title="doku.php﹖id=doku.php﹖id=nl﹕start.html">Recente wijzigingen</a>.
+De DansWiki heeft de mogelijkheid om per pagina te kijken naar de recente wijzigingen. Dit doe je door via het menu bovenin naar “Recente aanpassingen” te gaan of door “&amp;do=recent” zonder aanhalingstekens achter de <abbr title="Uniform Resource Locator">URL</abbr> van de pagina te plakken. Er is ook een pagina waarmee je alle recente aanpassingen van over de hele DansWiki kunt zien. Deze vindt je of via de hiervoor genoemde pagina of je kunt er direct naartoe gaan via <a href="doku.php﹖id=doku.php﹖id=nl﹕start.html" rel="nofollow" title="doku.php﹖id=doku.php﹖id=nl﹕start.html">Recente wijzigingen</a>.
 </p>
 
 </div>
 
-<h4 class="sectionedit4" id="nieuwe_pagina_beginnen">Nieuwe pagina beginnen</h4>
-<div class="level4">
+<h4 id="nieuwe_pagina_beginnen">Nieuwe pagina beginnen</h4>
+<div>
 
 <p>
 Je hebt alle bestaande pagina's doorgespit, maar kon niet vinden wat je zocht en wilt een nieuwe pagina beginnen? Nou doe dat vooral en draag bij aan alle informatie. Er zijn twee makkelijk denkbare manieren om dit te bereiken. Bij de eerste zet je bovenin je adresbalk achter “id=” de gewenste naam van de nieuwe pagina en ga je naar dat adres. Je krijgt dan als het goed is de melding dat de pagina nog niet bestaat en de vraag of je hem aan wilt maken. De andere optie is een pagina zoeken vanaf waar er gelinkt moet worden naar de nieuwe pagina en dan kun je een interne link naar de nog niet bestaande pagina maken. Deze link zal rood verschijnen en zodra je er op klikt om er naartoe te gaan krijg je de mededeling dat de pagina nog niet bestaat en de vraag of je hem aan wilt maken. Het aanmaken kan door of in het menu (steeksleuteltje bovenaan) naar “Maak deze pagina aan” te gaan of dezelfde knop rechts in beeld (met het potloodje) te gebruiken.
 </p>
 
 <p>
-Houd bij het maken van een nieuwe pagina wel rekening met de naam en de locatie (namespace) van de nieuwe pagina. De <a class="urlextern" href="https://www.dokuwiki.org/nl:namespaces" rel="nofollow" title="https://www.dokuwiki.org/nl:namespaces">namespace</a> wordt namelijk gebruikt voor overzicht, maar ook om de verschillende talen uit elkaar te houden. (Bijvoorbeeld nl:Balfolk en en:Balfolk zijn dezelfde pagina's in het Nederlands en in het Engels.) Gebruik bij voorkeur een korte duidelijke naam, zodat het ook makkelijk is om er naartoe te kunnen linken. Daarbij zijn de meeste pagina's gegroepeerd. Dat betekent dat alle dansen bijvoorbeeld niet gewoon “dansnaam” zijn qua locatie, maar “Taal:Dansen:dansnaam”. Dit om de locaties van alle pagina's wat overzichtelijker te houden en zodoende zaken wat makkelijker terug zijn te vinden. Probeer je ook aan dit systeem te houden.
+Houd bij het maken van een nieuwe pagina wel rekening met de naam en de locatie (namespace) van de nieuwe pagina. De <a href="https://www.dokuwiki.org/nl:namespaces" rel="nofollow" title="https://www.dokuwiki.org/nl:namespaces">namespace</a> wordt namelijk gebruikt voor overzicht, maar ook om de verschillende talen uit elkaar te houden. (Bijvoorbeeld nl:Balfolk en en:Balfolk zijn dezelfde pagina's in het Nederlands en in het Engels.) Gebruik bij voorkeur een korte duidelijke naam, zodat het ook makkelijk is om er naartoe te kunnen linken. Daarbij zijn de meeste pagina's gegroepeerd. Dat betekent dat alle dansen bijvoorbeeld niet gewoon “dansnaam” zijn qua locatie, maar “Taal:Dansen:dansnaam”. Dit om de locaties van alle pagina's wat overzichtelijker te houden en zodoende zaken wat makkelijker terug zijn te vinden. Probeer je ook aan dit systeem te houden.
 </p>
 
 </div>
 
-<h4 class="sectionedit5" id="overleg">Overleg</h4>
-<div class="level4">
+<h4 id="overleg">Overleg</h4>
+<div>
 
 <p>
 Verder kan het zijn dat je niet helemaal zeker bent over iets wat je op een pagina tegenkomt, maar het ook niet meteen wilt aanpassen zonder overleg. Daarvoor hebben we de Discussion pagina om met iedereen die daar mening over heeft, het een en ander te kunnen bediscussiëren. De discussiepagina kan op elke pagina benaderd worden door het icoontje in het knoppenmenu rechts of via het algemene menu bovenin. Mocht er nog nooit een overleg zijn geweest over een bepaalde pagina, kom je op een nog niet bestaande pagina uit die dan dus nog aangemaakt moet worden.
@@ -97,22 +97,22 @@ Om het overleg overzichtelijk te houden is het overigens wenselijk even per beri
 
 </div>
 
-<h3 class="sectionedit6" id="geinstalleerde_plug-ins">Geïnstalleerde plug-ins</h3>
+<h3 id="geinstalleerde_plug-ins">Geïnstalleerde plug-ins</h3>
 <div>
 
 <p>
 Zie hier een overzicht van alle geïnstalleerde plug-ins waarvan het nuttig kan zijn om te weten dat ze er zijn en hoe ze te gebruiken voor het aanpassen en maken van pagina's.
 </p>
 <ul>
-<li><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:move" rel="nofollow" title="https://www.dokuwiki.org/plugin:move">Move</a> kan worden gebruikt voor het verhuizen van pagina's terwijl alle links overal worden behouden. (Dus met deze plugin kan de naam of namespace van een pagina kan worden aangepast zonder dat je overal alle linkjes naar de pagina hoeft te updaten.)</div>
+<li><div> <a href="https://www.dokuwiki.org/plugin:move" rel="nofollow" title="https://www.dokuwiki.org/plugin:move">Move</a> kan worden gebruikt voor het verhuizen van pagina's terwijl alle links overal worden behouden. (Dus met deze plugin kan de naam of namespace van een pagina kan worden aangepast zonder dat je overal alle linkjes naar de pagina hoeft te updaten.)</div>
 </li>
-<li><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:multilingual" rel="nofollow" title="https://www.dokuwiki.org/plugin:multilingual">Multi-Lingual</a> wordt gebruikt voor de meertaligheid van de website. Deze is dus verantwoordelijk voor de mooie vlaggetjes rechtsboven naar de andere talen en het hiermee weer kunnen geven van de beschikbare talen per pagina. Mocht er een verzoek zijn om nog meer talen toe te voegen dan er nu bij staan, omdat je serieus in die taal aan de slag wilt, dan is dit geen enkel probleem. Laat het even weten aan de Balfolk Enschede organisatie en het wordt geregeld.</div>
+<li><div> <a href="https://www.dokuwiki.org/plugin:multilingual" rel="nofollow" title="https://www.dokuwiki.org/plugin:multilingual">Multi-Lingual</a> wordt gebruikt voor de meertaligheid van de website. Deze is dus verantwoordelijk voor de mooie vlaggetjes rechtsboven naar de andere talen en het hiermee weer kunnen geven van de beschikbare talen per pagina. Mocht er een verzoek zijn om nog meer talen toe te voegen dan er nu bij staan, omdat je serieus in die taal aan de slag wilt, dan is dit geen enkel probleem. Laat het even weten aan de Balfolk Enschede organisatie en het wordt geregeld.</div>
 </li>
-<li><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:vshare" rel="nofollow" title="https://www.dokuwiki.org/plugin:vshare">Video Sharing Site</a> wordt gebruikt voor het kunnen weergeven van filmpjes afkomstig van websites zoals Youtube.</div>
+<li><div> <a href="https://www.dokuwiki.org/plugin:vshare" rel="nofollow" title="https://www.dokuwiki.org/plugin:vshare">Video Sharing Site</a> wordt gebruikt voor het kunnen weergeven van filmpjes afkomstig van websites zoals Youtube.</div>
 </li>
-<li><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:refnotes" rel="nofollow" title="https://www.dokuwiki.org/plugin:refnotes">refNotes</a> kan worden gebruik voor het makkelijk linken naar referenties/bronnen vanuit de tekst.</div>
+<li><div> <a href="https://www.dokuwiki.org/plugin:refnotes" rel="nofollow" title="https://www.dokuwiki.org/plugin:refnotes">refNotes</a> kan worden gebruik voor het makkelijk linken naar referenties/bronnen vanuit de tekst.</div>
 </li>
-<li><div class="li"> <a class="urlextern" href="https://www.dokuwiki.org/plugin:edittable" rel="nofollow" title="https://www.dokuwiki.org/plugin:edittable">EditTable</a> kan worden gebruikt om wat gemakkelijker tabellen aan te maken/aan te passen.</div>
+<li><div> <a href="https://www.dokuwiki.org/plugin:edittable" rel="nofollow" title="https://www.dokuwiki.org/plugin:edittable">EditTable</a> kan worden gebruikt om wat gemakkelijker tabellen aan te maken/aan te passen.</div>
 </li>
 </ul>
 
