--- a/source/web/algemeen/terminologie.html
+++ b/source/web/algemeen/terminologie.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="terminologie">Terminologie</h3>
+<html><head></head><body><div>
+<h3 id="terminologie">Terminologie</h3>
 <div>
 
 <p>
@@ -12,8 +12,8 @@ Hiernaar kan verwezen worden vanuit de beschrijvingen van de verschillende balfo
 
 </div>
 
-<h4 class="sectionedit2" id="standbeen">Standbeen</h4>
-<div class="level4">
+<h4 id="standbeen">Standbeen</h4>
+<div>
 
 <p>
 Het been waarop het gewicht rust.
@@ -21,8 +21,8 @@ Het been waarop het gewicht rust.
 
 </div>
 
-<h4 class="sectionedit3" id="stap">Stap</h4>
-<div class="level4">
+<h4 id="stap">Stap</h4>
+<div>
 
 <p>
 het verplaatsen van een voet met overbrengen van het lichaamsgewicht, terwijl de andere voet nog op de grond is.
@@ -30,8 +30,8 @@ het verplaatsen van een voet met overbrengen van het lichaamsgewicht, terwijl de
 
 </div>
 
-<h4 class="sectionedit4" id="sprong">Sprong</h4>
-<div class="level4">
+<h4 id="sprong">Sprong</h4>
+<div>
 
 <p>
 Dit is een afzet van één van beide voeten of van allebei tegelijk, daarna een zweefmoment en tenslotte neerkomen op één van beide voeten of op allebei.
@@ -41,9 +41,9 @@ Dit is een afzet van één van beide voeten of van allebei tegelijk, daarna een 
 1. afzetten van beide en neerkomen op beide:
 </p>
 <ul>
-<li><div class="li"><em>Sluitsprong:</em>         neerkomen op gesloten voeten</div>
+<li><div><em>Sluitsprong:</em>         neerkomen op gesloten voeten</div>
 </li>
-<li><div class="li"><em>Spreidsprong:</em>      neerkomen in spreidstand</div>
+<li><div><em>Spreidsprong:</em>      neerkomen in spreidstand</div>
 </li>
 </ul>
 
@@ -51,13 +51,13 @@ Dit is een afzet van één van beide voeten of van allebei tegelijk, daarna een 
 2. afzetten van twee voeten en neerkomen op één:
 </p>
 <ul>
-<li><div class="li">op de plaats </div>
+<li><div>op de plaats </div>
 </li>
-<li><div class="li">Zijwaarts </div>
+<li><div>Zijwaarts </div>
 </li>
-<li><div class="li">voorwaarts </div>
+<li><div>voorwaarts </div>
 </li>
-<li><div class="li">achterwaarts </div>
+<li><div>achterwaarts </div>
 </li>
 </ul>
 
@@ -71,8 +71,8 @@ Dit is een afzet van één van beide voeten of van allebei tegelijk, daarna een 
 
 </div>
 
-<h4 class="sectionedit5" id="tik">Tik</h4>
-<div class="level4">
+<h4 id="tik">Tik</h4>
+<div>
 
 <p>
 Het met de voet de grond aantikken zonder dat er gewicht wordt overgebracht.
@@ -84,8 +84,8 @@ Kan bv met teen, hele voet of hiel.
 
 </div>
 
-<h4 class="sectionedit6" id="wandelpas">Wandelpas</h4>
-<div class="level4">
+<h4 id="wandelpas">Wandelpas</h4>
+<div>
 
 <p>
 een serie stappen, kan voorwaarts of achterwaarts
@@ -93,8 +93,8 @@ een serie stappen, kan voorwaarts of achterwaarts
 
 </div>
 
-<h4 class="sectionedit7" id="looppas">Looppas</h4>
-<div class="level4">
+<h4 id="looppas">Looppas</h4>
+<div>
 
 <p>
 een serie loopsprongetjes voorwaarts of achterwaarts. Onstaat meestal wanneer een wandelpas versneld wordt.
@@ -102,8 +102,8 @@ een serie loopsprongetjes voorwaarts of achterwaarts. Onstaat meestal wanneer ee
 
 </div>
 
-<h4 class="sectionedit8" id="aansluitpas">Aansluitpas</h4>
-<div class="level4">
+<h4 id="aansluitpas">Aansluitpas</h4>
+<div>
 
 <p>
 Een stap naast het standbeen
@@ -111,8 +111,8 @@ Een stap naast het standbeen
 
 </div>
 
-<h4 class="sectionedit9" id="bijtrekpas">Bijtrekpas</h4>
-<div class="level4">
+<h4 id="bijtrekpas">Bijtrekpas</h4>
+<div>
 
 <p>
 Een stap opzij gevolgd door aansluitpas.
@@ -120,8 +120,8 @@ Een stap opzij gevolgd door aansluitpas.
 
 </div>
 
-<h4 class="sectionedit10" id="wisselpas">Wisselpas</h4>
-<div class="level4">
+<h4 id="wisselpas">Wisselpas</h4>
+<div>
 
 <p>
 dubbele gewichtswisseling met aansluitpas
@@ -132,11 +132,11 @@ dubbele gewichtswisseling met aansluitpas
 Bijvoorbeeld met Links te beginnen:
 </p>
 <ol>
-<li><div class="li">verplaats linker been met gewicht</div>
+<li><div>verplaats linker been met gewicht</div>
 </li>
-<li><div class="li">sluit rechterbeen aan met gewicht</div>
+<li><div>sluit rechterbeen aan met gewicht</div>
 </li>
-<li><div class="li">verplaats linkerbeen met gewicht </div>
+<li><div>verplaats linkerbeen met gewicht </div>
 </li>
 </ol>
 
@@ -146,8 +146,8 @@ Bijvoorbeeld met Links te beginnen:
 
 </div>
 
-<h4 class="sectionedit11" id="galoppas">Galoppas</h4>
-<div class="level4">
+<h4 id="galoppas">Galoppas</h4>
+<div>
 
 <p>
 Stap opzij, gevolgd door aansluiten van de andere voet met een sprongetje, het aansluiten gebeurt nu in de lucht. De pas ontstaat meestel wanneer een bijtrekpas versneld wordt. Om de pas goed in te zetten moet men beginnen met een opvering op het afzetbeen.
@@ -155,8 +155,8 @@ Stap opzij, gevolgd door aansluiten van de andere voet met een sprongetje, het a
 
 </div>
 
-<h4 class="sectionedit12" id="stap-hop_pas">Stap-hop pas</h4>
-<div class="level4">
+<h4 id="stap-hop_pas">Stap-hop pas</h4>
+<div>
 
 <p>
 Een stap op rechts, gevolgd door een hop op hetzlefde been, dan idem links enz.
@@ -168,8 +168,8 @@ Een stap op rechts, gevolgd door een hop op hetzlefde been, dan idem links enz.
 
 </div>
 
-<h4 class="sectionedit13" id="hop-stap_pas">Hop-stap pas</h4>
-<div class="level4">
+<h4 id="hop-stap_pas">Hop-stap pas</h4>
+<div>
 
 <p>
 Een hop op rechts, gevolgd door een stap met links, daarna begint de volgende weer met een hop op links, enz.
@@ -177,8 +177,8 @@ Een hop op rechts, gevolgd door een stap met links, daarna begint de volgende we
 
 </div>
 
-<h4 class="sectionedit14" id="huppelpas">Huppelpas</h4>
-<div class="level4">
+<h4 id="huppelpas">Huppelpas</h4>
+<div>
 
 <p>
 Een versnelde stap-hop pas.
@@ -186,8 +186,8 @@ Een versnelde stap-hop pas.
 
 </div>
 
-<h4 class="sectionedit15" id="rielpas">Rielpas</h4>
-<div class="level4">
+<h4 id="rielpas">Rielpas</h4>
+<div>
 
 <p>
 Een stap-hop pas of een huppelpas, waarbij de voet steeds achter c.q. vóór  de andere wordt neergezet en dan bij de hup weer naar voren c.q. naar achteren wordt verplaats, zodanig dat men op  dezelfde plek blijft.
@@ -199,8 +199,8 @@ Om deze pas goed te kunnen uitvoeren moet men de benen goed uitdraaien.
 
 </div>
 
-<h4 class="sectionedit16" id="driepas">Driepas</h4>
-<div class="level4">
+<h4 id="driepas">Driepas</h4>
+<div>
 
 <p>
 Algemene benaming voor iedere pas die uit drie stapjes bestaat.
@@ -246,8 +246,8 @@ Vroeger werd deze pas ook wel aangeduid als een <em>polka-pas</em>.
 
 </div>
 
-<h4 class="sectionedit17" id="mayim_pas">Mayim pas</h4>
-<div class="level4">
+<h4 id="mayim_pas">Mayim pas</h4>
+<div>
 
 <p>
 Wandel- of loopaas zijwaarts, waarbij de ene voet afwisselend voor of achter de andere wordt langs kruisend wordt neergezet. Begint meestal met vóór kruisen.
@@ -263,8 +263,8 @@ Laat je de zijwaartse verplaatsing weg (en daarmee dus dan ook het kruisen) dan 
 
 </div>
 
-<h4 class="sectionedit18" id="spinpas">Spinpas</h4>
-<div class="level4">
+<h4 id="spinpas">Spinpas</h4>
+<div>
 
 <p>
 Stap met de rechtervoet vóór de linker langs, met doorbuigen in de rechter knie, gevolgd door neerzetten van de linker voorvoet achter of iets voorbij de rechter en strekken van het linkerbeen. Hierbij wordt de rechter voet dan weer verplaats etc.
@@ -276,7 +276,7 @@ Niet te verwarren met het “SPINNEN” - dat doe je met z'n tweeën.
 
 </div>
 
-<h3 class="sectionedit19" id="draaipassen">Draaipassen</h3>
+<h3 id="draaipassen">Draaipassen</h3>
 <div>
 
 <p>
@@ -285,8 +285,8 @@ Sommige van bovenstaande passen kunnen door paren draaiend worden uitgevoerd. Da
 
 </div>
 
-<h4 class="sectionedit20" id="wandelpas1">Wandelpas</h4>
-<div class="level4">
+<h4 id="wandelpas1">Wandelpas</h4>
+<div>
 
 <p>
 Wordt een TWEESTAPSDRAAI ook wel genoemd BOERENWALS
@@ -294,8 +294,8 @@ Wordt een TWEESTAPSDRAAI ook wel genoemd BOERENWALS
 
 </div>
 
-<h4 class="sectionedit21" id="stap-hop">Stap-Hop</h4>
-<div class="level4">
+<h4 id="stap-hop">Stap-Hop</h4>
+<div>
 
 <p>
 Wordt een stap-hop met rondgaan oftewel een POLKA pas MET OVERSTAP
@@ -303,8 +303,8 @@ Wordt een stap-hop met rondgaan oftewel een POLKA pas MET OVERSTAP
 
 </div>
 
-<h4 class="sectionedit22" id="wisselpas2">Wisselpas</h4>
-<div class="level4">
+<h4 id="wisselpas2">Wisselpas</h4>
+<div>
 
 <p>
 Dat wordt een GLIJPOLKA
@@ -312,8 +312,8 @@ Dat wordt een GLIJPOLKA
 
 </div>
 
-<h4 class="sectionedit23" id="walspas">Walspas</h4>
-<div class="level4">
+<h4 id="walspas">Walspas</h4>
+<div>
 
 <p>
 Doe je dat met zijn tweeën dan heet het een WALS
@@ -321,8 +321,8 @@ Doe je dat met zijn tweeën dan heet het een WALS
 
 </div>
 
-<h4 class="sectionedit24" id="schotse_pas1">Schotse pas</h4>
-<div class="level4">
+<h4 id="schotse_pas1">Schotse pas</h4>
+<div>
 
 <p>
 Wordt, als je doordraait, een (normale) POLKA. Doe je dit in open danshouding heen-en-weer dan heb je (rara) een OPEN POLKA.
@@ -330,8 +330,8 @@ Wordt, als je doordraait, een (normale) POLKA. Doe je dit in open danshouding he
 
 </div>
 
-<h4 class="sectionedit25" id="spinpas1">Spinpas</h4>
-<div class="level4">
+<h4 id="spinpas1">Spinpas</h4>
+<div>
 
 <p>
 Doe je dit samen dan ben je aan het SPINNEN.
@@ -339,7 +339,7 @@ Doe je dit samen dan ben je aan het SPINNEN.
 
 </div>
 
-<h3 class="sectionedit26" id="het_draaien">Het draaien</h3>
+<h3 id="het_draaien">Het draaien</h3>
 <div>
 
 <p>
