--- a/source/web/dansen/an_dro.html
+++ b/source/web/dansen/an_dro.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="an_dro">An Dro</h3>
+<html><head></head><body><div>
+<h3 id="an_dro">An Dro</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Dit is een (meestal) rustige, haast meditative dans.
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Iedereen in 1 of meerdere lange slierten. Waar mannen en vrouwen in de rij staan maakt nu niet meer uit; oorspronkelijk stond er een man aan het begin van de rij.
@@ -17,68 +17,68 @@ Iedereen in 1 of meerdere lange slierten. Waar mannen en vrouwen in de rij staan
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 <ul>
-<li><div class="li">Volg-de-leider: houdt elkaar vast bij de pinken, palm van de hand wijst omlaag. Je haakt je pink in de pink van de persoon naast je. Ook al hebben alleen de pinken elkaar vast, de hele onderarm houdt contact. Op die manier 'verlies' je elkaar niet. De leider en laatste kunnen de vrije arm op de rug doen. In Bretagne wordt dit heel vaak ook niet gedaan. Voor dames: mocht je iets met de vrije arm willen doen, pak dan je rok in je hand. De hand op de rug is traditioneel iets voor mannen.</div>
+<li><div>Volg-de-leider: houdt elkaar vast bij de pinken, palm van de hand wijst omlaag. Je haakt je pink in de pink van de persoon naast je. Ook al hebben alleen de pinken elkaar vast, de hele onderarm houdt contact. Op die manier 'verlies' je elkaar niet. De leider en laatste kunnen de vrije arm op de rug doen. In Bretagne wordt dit heel vaak ook niet gedaan. Voor dames: mocht je iets met de vrije arm willen doen, pak dan je rok in je hand. De hand op de rug is traditioneel iets voor mannen.</div>
 </li>
-<li><div class="li">Verplaatsingsrichting is naar links, kijkrichting is vooruit. Je beweegt dus zijwaarts, en altijd alleen naar links.</div>
+<li><div>Verplaatsingsrichting is naar links, kijkrichting is vooruit. Je beweegt dus zijwaarts, en altijd alleen naar links.</div>
 </li>
-<li class="level1 node"><div class="li">Patroon voeten van 2x vier tellen (dus twee maten):</div>
+<li class="node"><div>Patroon voeten van 2x vier tellen (dus twee maten):</div>
 <ul>
-<li><div class="li">I: wisselpas naar links gevolgd door een tel rust (links - rechts - links - rust)</div>
+<li><div>I: wisselpas naar links gevolgd door een tel rust (links - rechts - links - rust)</div>
 </li>
-<li><div class="li">II: wisselpas op de plaats, begint met rechts, gevolgd door een tel rust (rechts - links - rechts - rust) </div>
+<li><div>II: wisselpas op de plaats, begint met rechts, gevolgd door een tel rust (rechts - links - rechts - rust) </div>
 </li>
 </ul>
 </li>
-<li><div class="li">Patroon handen van 2x vier tellen: draaibeweging met handen. De beweging lijkt op een “9”, draai hem van onderaf in met rustpunt op de drie van de eerste maat, daarna bovenlangs weer terug. Deze armbeweging gaat niet hoger dan de schouders. </div>
-</li>
-</ul>
-
-</div>
-
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
-<ul>
-<li><div class="li">Bij de start van de uitleg: nog niet de handbeweging, maar de armen gewoon losjes naar beneden laten hangen</div>
-</li>
-<li><div class="li">Dames en heren, denk even na of er ringen om de ringvinger zitten die misschien danspartners pijn kunnen doen. Zo ja, even verplaatsen. Kleine moeite en echt heel erg veel meer dansplezier.</div>
-</li>
-<li><div class="li">Niet te hard knijpen!</div>
-</li>
-<li><div class="li">Rustig in de swing van het liedje blijven.</div>
-</li>
-<li><div class="li">De eerste stap naar links een beetje nadruk en zwier geven</div>
-</li>
-<li><div class="li">Loop niet te hard, anders rekken de middelsten zo uit</div>
-</li>
-<li><div class="li">Ga niet naar rechts, voren of achteren, alleen naar links en op de plaats</div>
-</li>
-<li><div class="li">Dit is van oorsprong een boerendans, dus op klompen. Probeer de voeten meer te schuiven in plaats van ze op te tillen</div>
-</li>
-<li><div class="li">Wees stil, geniet van de kadans</div>
-</li>
-<li><div class="li">Doe ogen dicht (maar niet als je de eerste van de rij bent!)</div>
-</li>
-<li><div class="li">Wanneer de armen naar beneden gaan, deze ontspannen</div>
-</li>
-<li><div class="li">Nog even over die pinken: de palm van je hand wijst omlaag. Je pink zit dan dus aan de “buitenkant” van je hand. </div>
+<li><div>Patroon handen van 2x vier tellen: draaibeweging met handen. De beweging lijkt op een “9”, draai hem van onderaf in met rustpunt op de drie van de eerste maat, daarna bovenlangs weer terug. Deze armbeweging gaat niet hoger dan de schouders. </div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 <ul>
-<li><div class="li">Maak meer dan een sliert.</div>
+<li><div>Bij de start van de uitleg: nog niet de handbeweging, maar de armen gewoon losjes naar beneden laten hangen</div>
 </li>
-<li class="level1 node"><div class="li">patronen door de leider:</div>
+<li><div>Dames en heren, denk even na of er ringen om de ringvinger zitten die misschien danspartners pijn kunnen doen. Zo ja, even verplaatsen. Kleine moeite en echt heel erg veel meer dansplezier.</div>
+</li>
+<li><div>Niet te hard knijpen!</div>
+</li>
+<li><div>Rustig in de swing van het liedje blijven.</div>
+</li>
+<li><div>De eerste stap naar links een beetje nadruk en zwier geven</div>
+</li>
+<li><div>Loop niet te hard, anders rekken de middelsten zo uit</div>
+</li>
+<li><div>Ga niet naar rechts, voren of achteren, alleen naar links en op de plaats</div>
+</li>
+<li><div>Dit is van oorsprong een boerendans, dus op klompen. Probeer de voeten meer te schuiven in plaats van ze op te tillen</div>
+</li>
+<li><div>Wees stil, geniet van de kadans</div>
+</li>
+<li><div>Doe ogen dicht (maar niet als je de eerste van de rij bent!)</div>
+</li>
+<li><div>Wanneer de armen naar beneden gaan, deze ontspannen</div>
+</li>
+<li><div>Nog even over die pinken: de palm van je hand wijst omlaag. Je pink zit dan dus aan de “buitenkant” van je hand. </div>
+</li>
+</ul>
+
+</div>
+
+<h4 id="variaties">Variaties</h4>
+<div>
 <ul>
-<li><div class="li">ga vaak weer vlak voor de heensliert weer terug zodat iedereen elkaar aan kan kijken.</div>
+<li><div>Maak meer dan een sliert.</div>
 </li>
-<li><div class="li">ga voor de grap eens onder iemands a
+<li class="node"><div>patronen door de leider:</div>
+<ul>
+<li><div>ga vaak weer vlak voor de heensliert weer terug zodat iedereen elkaar aan kan kijken.</div>
+</li>
+<li><div>ga voor de grap eens onder iemands a
 </div>
           </li></ul></li></ul></div>
         </div>
