--- a/source/web/dansen/bourree_d_auvergne.html
+++ b/source/web/dansen/bourree_d_auvergne.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="bourree_d_auvergne">Bourrée d'Auvergne</h3>
+<html><head></head><body><div>
+<h3 id="bourree_d_auvergne">Bourrée d'Auvergne</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ De moeder van alle bourrées
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 In koppel: verspreid over de ruimte, handen los, naast elkaar.
@@ -21,8 +21,8 @@ Heer staat links, dame rechts van de heer. Rechterschouders naar elkaar; dame en
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 </div>
 
@@ -72,9 +72,9 @@ Altijd blijft de plat-bal-plat gehandhaafd. Dit kan lastig zijn bij met name de 
 Officieel is niets vastgelegd, maar als houvast kan de volgende volgorde dienen die op bals te doen gebruikelijk is:
 </p>
 <ul>
-<li><div class="li">4 x banaan</div>
+<li><div>4 x banaan</div>
 </li>
-<li><div class="li">4 x rond </div>
+<li><div>4 x rond </div>
 </li>
 </ul>
 
@@ -131,15 +131,15 @@ De “volger” spiegelt de lichaamshouding van de “leider”.
 Er zijn vijf richtingen:
 </p>
 <ul>
-<li><div class="li">Frontaal</div>
+<li><div>Frontaal</div>
 </li>
-<li><div class="li">Linkerschouders naar elkaar</div>
+<li><div>Linkerschouders naar elkaar</div>
 </li>
-<li><div class="li">Rechterschouders naar elkaar</div>
+<li><div>Rechterschouders naar elkaar</div>
 </li>
-<li><div class="li">Diagonaal links</div>
+<li><div>Diagonaal links</div>
 </li>
-<li><div class="li">Diagonaal rechts </div>
+<li><div>Diagonaal rechts </div>
 </li>
 </ul>
 
@@ -149,8 +149,8 @@ De “leider” kan/mag/moet van oriëntatie wisselen en de “volger” volgt. 
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 
 <p>
 Allerbelangrijkste is dat de “leider” duidelijk aangeeft (richtingen, orientatie, draaien) en de “volger” goed oplet en goed volgt. Daarom moet er altijd goed contact tussen beide zijn.
@@ -162,8 +162,8 @@ Het is echter ook mogelijk dat leider en volger van rol wisselen, of dat elk op 
 
 </div>
 
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
+<h4 id="variaties">Variaties</h4>
+<div>
 
 <p>
 Aan het einde van de banaan kan men de frappés doen. Dit zijn lichte stampjes.
@@ -195,17 +195,17 @@ Bij een vrijere dans kunnen bijvoorbeeld richtingsveranderingen en andere initia
 
 </div>
 
-<h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Bourrée 3t d'Auvergne instructie</div>
+<li><div>Bourrée 3t d'Auvergne instructie</div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/A186jBMs6sE" width="425"></iframe><ul>
-<li><div class="li">Chemins de Traverse au bal folk de Bures-sur-Yvette le samedi 19 mai 2007 </div>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/A186jBMs6sE" width="425"></iframe><ul>
+<li><div>Chemins de Traverse au bal folk de Bures-sur-Yvette le samedi 19 mai 2007 </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/NcIXw6u-65U" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/NcIXw6u-65U" width="425"></iframe>
 </div>
 
 </div>
