--- a/source/web/dansen/bourree_du_berry.html
+++ b/source/web/dansen/bourree_du_berry.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="bourree">Bourree</h3>
+<html><head></head><body><div>
+<h3 id="bourree">Bourree</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Spannende dans
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 In de meest gedanste versie staan dansparen opgesteld in rijen tegenover elkaar, op een afstand dat ze elkaars handen kunnen aanraken.
@@ -17,26 +17,26 @@ In de meest gedanste versie staan dansparen opgesteld in rijen tegenover elkaar,
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 De basis om een bourree mee te kunnen dansen bestaat uit een <strong>vereenvoudigde</strong> bourreepas (de passen voor de dame en heer zijn in de bourree gelijk):
 </p>
 <ul>
-<li class="level1 node"><div class="li">Bourreepas vooruit</div>
+<li class="node"><div>Bourreepas vooruit</div>
 <ul>
-<li><div class="li"><strong>Tel 1, 2, 3</strong>: grote pas naar voren (links), rechts er naast, links op de plaats</div>
+<li><div><strong>Tel 1, 2, 3</strong>: grote pas naar voren (links), rechts er naast, links op de plaats</div>
 </li>
-<li><div class="li"><strong>Tel 4, 5, 6</strong>: rechts op de plaats, links op de plaats, rechts op de plaats </div>
+<li><div><strong>Tel 4, 5, 6</strong>: rechts op de plaats, links op de plaats, rechts op de plaats </div>
 </li>
 </ul>
 </li>
-<li class="level1 node"><div class="li">Bourreepas achteruit</div>
+<li class="node"><div>Bourreepas achteruit</div>
 <ul>
-<li><div class="li"><strong>Tel 1, 2, 3</strong>: grote pas naar achter (links), rechts er naast, links op de plaats</div>
+<li><div><strong>Tel 1, 2, 3</strong>: grote pas naar achter (links), rechts er naast, links op de plaats</div>
 </li>
-<li><div class="li"><strong>Tel 4, 5, 6</strong>: rechts op de plaats, links op de plaats, rechts op de plaats </div>
+<li><div><strong>Tel 4, 5, 6</strong>: rechts op de plaats, links op de plaats, rechts op de plaats </div>
 </li>
 </ul>
 </li>
@@ -46,19 +46,19 @@ De basis om een bourree mee te kunnen dansen bestaat uit een <strong>vereenvoudi
 De dans bestaat verder uit een A- en een B-deel:
 </p>
 <ul>
-<li class="level1 node"><div class="li"><strong>A</strong> (4 maal):</div>
+<li class="node"><div><strong>A</strong> (4 maal):</div>
 <ul>
-<li><div class="li">Bourreepas vooruit (6 tellen)</div>
+<li><div>Bourreepas vooruit (6 tellen)</div>
 </li>
-<li><div class="li">Bourreepas achteruit (6 tellen) </div>
+<li><div>Bourreepas achteruit (6 tellen) </div>
 </li>
 </ul>
 </li>
-<li class="level1 node"><div class="li"><strong>B</strong> (4 maal) (nu beginnen met de linkerschouder naar elkaar):</div>
+<li class="node"><div><strong>B</strong> (4 maal) (nu beginnen met de linkerschouder naar elkaar):</div>
 <ul>
-<li><div class="li">Bourreepas vooruit, maar met een kwartdraai naar links zodat de dame en heer tegenover elkaar staan (6 tellen)</div>
+<li><div>Bourreepas vooruit, maar met een kwartdraai naar links zodat de dame en heer tegenover elkaar staan (6 tellen)</div>
 </li>
-<li><div class="li">Bourreepas vooruit, waarbij om de rechterschouder wordt gedraaid tot de dame en heer van plaats zijn gewisseld en weer met de linkerschouder naar elkaar staan (6 tellen) </div>
+<li><div>Bourreepas vooruit, waarbij om de rechterschouder wordt gedraaid tot de dame en heer van plaats zijn gewisseld en weer met de linkerschouder naar elkaar staan (6 tellen) </div>
 </li>
 </ul>
 </li>
@@ -66,87 +66,87 @@ De dans bestaat verder uit een A- en een B-deel:
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
-<ul>
-<li><div class="li">Zen-Zen: De normale bourreepas gaat eigenlijk niet op de eerste tel naar voren (of naar achter), maar twee tellen eerder. Dit betekent dat je in het A-deel op tel 4 een val maakt op het rechterbeen (je lichaam stopt met het bewegen naar voren) en al bij tel 5 je gewicht naar achteren verplaatst en dus een klein stapje naar achteren maakt. Hetzelfde geldt aan het eind van de bourreepas naar achteren: een val op 4 en een pasje naar voren op 5.</div>
-</li>
-<li><div class="li">De bourree doet eigenlijk geen passen op de plaats: je gaat of naar voren, of naar achteren, en als je naar voren gaat dan zal iedere pas op de plaats een klein beetje naar voren zijn. Idem voor achteruit.</div>
-</li>
-<li><div class="li">Bij het wisselen van plaats is het gebruikelijk om op tel 3 al tegenover elkaar te komen; tel 4, 5 en 6 kunnen stil tegenover elkaar of al richting de overkant gaan.</div>
-</li>
-<li><div class="li">Blijf altijd dicht bij elkaar</div>
-</li>
-<li><div class="li">De tellen kunnen regelmatig zijn (bourree in 3 tijden) of met een hups (1-en-2) (bourree in twee tijden)</div>
-</li>
-<li><div class="li">Dans altijd in de breedte van het podium: op die manier staat er nooit een danser met zijn/haar rug naar de muzikanten. </div>
-</li>
-</ul>
-
-</div>
-
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
-<ul>
-<li class="level1 node"><div class="li">Deel A</div>
-<ul>
-<li><div class="li">In plaats van recht naar elkaar, kunnen ook de linkerschouders naar elkaar gericht worden en een halve boog gemaakt worden zodat de rechterschouders naar elkaar staan, en weer terug naar achteren en met linkerschouders naar elkaar.</div>
-</li>
-<li><div class="li">In plaats van een halve boog heen en weer terug draaien, kan deze ook worden doorgedraaid.</div>
-</li>
-<li><div class="li">Er kunnen bij het naar voren of naar achteren gaan extra draaien worden toegevoegd. </div>
-</li>
-</ul>
-</li>
-<li class="level1 node"><div class="li">Deel B</div>
-<ul>
-<li><div class="li">Niet met de schouders naar elkaar staan, maar recht tegenover elkaar beginnen. Dan in de eerste drie tellen een halve draai maken zodat je al van plaats bent gewisseld en elkaar aankijkt. Dan tel 4, 5 en 6 op de plaats blijven en de volgende tellen gebruiken om recht naar achter te gaan (al dan niet met een draai). Deze variatie is logisch te vervolgen op een deel A dat recht naar elkaar wordt gedanst, vaak heeft de muziek een stopje op tel 4, 5 en 6 waardoor deze variatie goed uit de verf komt. </div>
-</li>
-</ul>
-</li>
-<li><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_en_cercle.html" title="nl:dansen:bourree_du_berry:bourree_en_cercle">Bourree en cercle</a></div>
-</li>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_des_jeunes.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_des_jeunes">Bourree des Jeunes</a></div>
-</li>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_croisee.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_croise">Bourree croisé</a></div>
-</li>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_carre">Bourree carré</a></div>
-</li>
-<li><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕la_grande_potterie.html" title="nl:dansen:bourree_du_berry:la_grande_potterie">La grande potterie</a></div>
-</li>
-<li><div class="li"><a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_valse_d_issoudun.html" title="nl:dansen:bourree_du_berry:bourree_valse_d_issoudun">Bourree valsé d'Issoudun</a></div>
-</li>
-<li><div class="li"><a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" rel="nofollow" title="nl:dansen:bourree_du_berry:kadootjesbourree">Kadootjesbourree</a></div>
-</li>
-<li><div class="li">(Vul maar aan) </div>
-</li>
-</ul>
-
-</div>
-
-<h3 class="sectionedit6" id="instructiefilmpjes">Instructiefilmpjes</h3>
+<h4 id="aanwijzingen">Aanwijzingen</h4>
 <div>
 <ul>
-<li><div class="li">Le pas de bourrée à 2 temps</div>
+<li><div>Zen-Zen: De normale bourreepas gaat eigenlijk niet op de eerste tel naar voren (of naar achter), maar twee tellen eerder. Dit betekent dat je in het A-deel op tel 4 een val maakt op het rechterbeen (je lichaam stopt met het bewegen naar voren) en al bij tel 5 je gewicht naar achteren verplaatst en dus een klein stapje naar achteren maakt. Hetzelfde geldt aan het eind van de bourreepas naar achteren: een val op 4 en een pasje naar voren op 5.</div>
+</li>
+<li><div>De bourree doet eigenlijk geen passen op de plaats: je gaat of naar voren, of naar achteren, en als je naar voren gaat dan zal iedere pas op de plaats een klein beetje naar voren zijn. Idem voor achteruit.</div>
+</li>
+<li><div>Bij het wisselen van plaats is het gebruikelijk om op tel 3 al tegenover elkaar te komen; tel 4, 5 en 6 kunnen stil tegenover elkaar of al richting de overkant gaan.</div>
+</li>
+<li><div>Blijf altijd dicht bij elkaar</div>
+</li>
+<li><div>De tellen kunnen regelmatig zijn (bourree in 3 tijden) of met een hups (1-en-2) (bourree in twee tijden)</div>
+</li>
+<li><div>Dans altijd in de breedte van het podium: op die manier staat er nooit een danser met zijn/haar rug naar de muzikanten. </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/0lN6jjY7RqU" width="425"></iframe><ul>
-<li><div class="li">Bourrée 2 temps - video notes </div>
-</li>
-</ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/yDCbfE0p3" width="425"></iframe>
+
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe pagina's</h3>
+<h4 id="variaties">Variaties</h4>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="BFdances.html#bourree" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#bourree">Celtic Bompa Bourree</a></div>
+<li class="node"><div>Deel A</div>
+<ul>
+<li><div>In plaats van recht naar elkaar, kunnen ook de linkerschouders naar elkaar gericht worden en een halve boog gemaakt worden zodat de rechterschouders naar elkaar staan, en weer terug naar achteren en met linkerschouders naar elkaar.</div>
 </li>
-<li><div class="li"><a class="urlextern" href="Bourree.html#head" rel="nofollow" title="http://celticbompa.4t.com/Bourree.html#head">Celtic Bompa Bourree Workshop-aantekeningen</a></div>
+<li><div>In plaats van een halve boog heen en weer terug draaien, kan deze ook worden doorgedraaid.</div>
 </li>
-<li><div class="li"><a class="urlextern" href="Wattrelos20040131.html#bourree" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#bourree">Celtic Bompa Bourree-filmpjes</a></div>
+<li><div>Er kunnen bij het naar voren of naar achteren gaan extra draaien worden toegevoegd. </div>
 </li>
-<li><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/1885.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1885.html">Folkroddels.be: Naar een bourree met stijl</a></div>
+</ul>
+</li>
+<li class="node"><div>Deel B</div>
+<ul>
+<li><div>Niet met de schouders naar elkaar staan, maar recht tegenover elkaar beginnen. Dan in de eerste drie tellen een halve draai maken zodat je al van plaats bent gewisseld en elkaar aankijkt. Dan tel 4, 5 en 6 op de plaats blijven en de volgende tellen gebruiken om recht naar achter te gaan (al dan niet met een draai). Deze variatie is logisch te vervolgen op een deel A dat recht naar elkaar wordt gedanst, vaak heeft de muziek een stopje op tel 4, 5 en 6 waardoor deze variatie goed uit de verf komt. </div>
+</li>
+</ul>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_en_cercle.html" title="nl:dansen:bourree_du_berry:bourree_en_cercle">Bourree en cercle</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_des_jeunes.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_des_jeunes">Bourree des Jeunes</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_croisee.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_croise">Bourree croisé</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" rel="nofollow" title="nl:dansen:bourree_du_berry:bourree_carre">Bourree carré</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕la_grande_potterie.html" title="nl:dansen:bourree_du_berry:la_grande_potterie">La grande potterie</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕bourree_valse_d_issoudun.html" title="nl:dansen:bourree_du_berry:bourree_valse_d_issoudun">Bourree valsé d'Issoudun</a></div>
+</li>
+<li><div><a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕bourree_du_berry﹕kadootjesbourree.html" rel="nofollow" title="nl:dansen:bourree_du_berry:kadootjesbourree">Kadootjesbourree</a></div>
+</li>
+<li><div>(Vul maar aan) </div>
+</li>
+</ul>
+
+</div>
+
+<h3 id="instructiefilmpjes">Instructiefilmpjes</h3>
+<div>
+<ul>
+<li><div>Le pas de bourrée à 2 temps</div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/0lN6jjY7RqU" width="425"></iframe><ul>
+<li><div>Bourrée 2 temps - video notes </div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/yDCbfE0p3" width="425"></iframe>
+</div>
+
+<h3 id="externe_pagina_s">Externe pagina's</h3>
+<div>
+<ul>
+<li><div><a href="BFdances.html#bourree" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#bourree">Celtic Bompa Bourree</a></div>
+</li>
+<li><div><a href="Bourree.html#head" rel="nofollow" title="http://celticbompa.4t.com/Bourree.html#head">Celtic Bompa Bourree Workshop-aantekeningen</a></div>
+</li>
+<li><div><a href="Wattrelos20040131.html#bourree" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#bourree">Celtic Bompa Bourree-filmpjes</a></div>
+</li>
+<li><div><a href="http://www.folkroddels.be/artikels/1885.html" rel="nofollow" title="http://www.folkroddels.be/artikels/1885.html">Folkroddels.be: Naar een bourree met stijl</a></div>
 </li>
 </ul>
 
