--- a/source/web/dansen/bourree_du_berry_bourree_valse_d_issoudun.html
+++ b/source/web/dansen/bourree_du_berry_bourree_valse_d_issoudun.html
@@ -1,10 +1,10 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
-<h3 class="sectionedit1" id="bourree_valse_d_issoudun">Bourrée valsé d'Issoudun</h3>
+<div>
+<h3 id="bourree_valse_d_issoudun">Bourrée valsé d'Issoudun</h3>
 <div>
 
 <p>
@@ -14,7 +14,7 @@ Het A deel wordt gedanst als gewone bourrée, in paren, met een wisseling van pl
 <p>
 Kijk maar:
 </p>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/nvwPnfwSpvU" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/nvwPnfwSpvU" width="425"></iframe>
 </div>
 
 </div>
