--- a/source/web/dansen/cercle.html
+++ b/source/web/dansen/cercle.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="cercle">Cercle</h3>
+<html><head></head><body><div>
+<h3 id="cercle">Cercle</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Een vrolijke mixer. Wordt in Vlaanderen Tovercirkel genoemd. En in Frankrijk Cer
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Een grote cirkel met om en om man en vrouw, iedereen houdt elkaars handen vast. De vrouwen leggen hun handen bovenop de handen van de heer. De 'eerstvolgende paren' zijn (man rechts/vrouw links)
@@ -17,8 +17,8 @@ Een grote cirkel met om en om man en vrouw, iedereen houdt elkaars handen vast. 
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 Muziek in 3 delen (A, B,C), elk deel 2x herhaald
@@ -26,122 +26,122 @@ Muziek in 3 delen (A, B,C), elk deel 2x herhaald
 
 </div>
 
-<h5 id="a">A</h5>
+<h5>A</h5>
 <div>
 <ul>
-<li><div class="li">(4 maten) 4 stappen naar voren (circel wordt kleiner), 4 stappen naar achter (circel wordt groter)</div>
+<li><div>(4 maten) 4 stappen naar voren (circel wordt kleiner), 4 stappen naar achter (circel wordt groter)</div>
 </li>
-<li><div class="li">(4 maten) 4 stappen naar voren (circel wordt kleiner), 4 stappen naar achter (circel wordt groter)</div>
+<li><div>(4 maten) 4 stappen naar voren (circel wordt kleiner), 4 stappen naar achter (circel wordt groter)</div>
 </li>
-<li><div class="li">Laat elkaar los.</div>
+<li><div>Laat elkaar los.</div>
 </li>
-<li><div class="li">(4 maten) Dames 4 stappen naar voren - 4 stappen naar achter, terwijl heren meeklappen</div>
+<li><div>(4 maten) Dames 4 stappen naar voren - 4 stappen naar achter, terwijl heren meeklappen</div>
 </li>
-<li><div class="li">(4 maten) Heren 4 stappen naar voren - OMDRAAIEN om linker schouder - 4 stappen naar hun nieuwe partner. </div>
+<li><div>(4 maten) Heren 4 stappen naar voren - OMDRAAIEN om linker schouder - 4 stappen naar hun nieuwe partner. </div>
 </li>
 </ul>
 
 </div>
 
-<h5 id="b">B</h5>
+<h5>B</h5>
 <div>
 <ul>
-<li><div class="li">Pak je partner beet.</div>
+<li><div>Pak je partner beet.</div>
 </li>
-<li><div class="li">(8 maten/16 tellen) Draai klokwaarts rondjes op de muziek als paar. Dit heet spinnen. Een manier van draaien die heel moeilijk is uit te leggen, zeker op papier…In ieder geval is de meest gangbare houding om te spinnen in Nederland met de rechterhand op rechterschouder van de partner met en de linkerhanden ferm in elkaar daaronder. Waarbij de rechtervoet met de buitenkant tegen de rechtervoet van de danspartner staat om een draaicentrum te hebben.</div>
+<li><div>(8 maten/16 tellen) Draai klokwaarts rondjes op de muziek als paar. Dit heet spinnen. Een manier van draaien die heel moeilijk is uit te leggen, zeker op papier…In ieder geval is de meest gangbare houding om te spinnen in Nederland met de rechterhand op rechterschouder van de partner met en de linkerhanden ferm in elkaar daaronder. Waarbij de rechtervoet met de buitenkant tegen de rechtervoet van de danspartner staat om een draaicentrum te hebben.</div>
 </li>
-<li><div class="li">Draai zo nog even verder. Aan het einde draait de man de vrouw door in de laatste 2 maten met zijn rechterhand de rechterhand van de dame van zijn schouder te halen, deze vervolgens met de klok mee voor de dame langs te bewegen zodat ze rechtsvoor de heer (aan de buitenkant) staat en de rechterarm van de heer achter de dame langs loopt, en de linkerhanden elkaar nog steeds vasthebben. Met het gezicht tegenklokwaarts in de kring weer terechtkomend. (Flankkring van paren zie Jig voor uitleg) </div>
+<li><div>Draai zo nog even verder. Aan het einde draait de man de vrouw door in de laatste 2 maten met zijn rechterhand de rechterhand van de dame van zijn schouder te halen, deze vervolgens met de klok mee voor de dame langs te bewegen zodat ze rechtsvoor de heer (aan de buitenkant) staat en de rechterarm van de heer achter de dame langs loopt, en de linkerhanden elkaar nog steeds vasthebben. Met het gezicht tegenklokwaarts in de kring weer terechtkomend. (Flankkring van paren zie Jig voor uitleg) </div>
 </li>
 </ul>
 
 </div>
 
-<h5 id="c">C</h5>
+<h5>C</h5>
 <div>
 <ul>
-<li><div class="li">(8 maten/16 tellen) Loop als paar in deze houding tegen de klok in, rustig op de cirkel. </div>
+<li><div>(8 maten/16 tellen) Loop als paar in deze houding tegen de klok in, rustig op de cirkel. </div>
 </li>
-<li><div class="li">En waarbij de heer met zijn linkerhand voor de dame langs gaat om haar te laten draaien en aan zijn rechterkant uit te laten komen en dan over te nemen met zijn rechterhand en een nieuwe dame te ontvangen in zijn linkerhand. </div>
+<li><div>En waarbij de heer met zijn linkerhand voor de dame langs gaat om haar te laten draaien en aan zijn rechterkant uit te laten komen en dan over te nemen met zijn rechterhand en een nieuwe dame te ontvangen in zijn linkerhand. </div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 
 <p>
 Hoe houd je vast…
 </p>
 <ul>
-<li><div class="li">A: gewoon handen vast, heren handen onder.</div>
+<li><div>A: gewoon handen vast, heren handen onder.</div>
 </li>
-<li class="level1 node"><div class="li">B: verschillende mogelijkheden:</div>
+<li class="node"><div>B: verschillende mogelijkheden:</div>
 <ul>
-<li><div class="li">meest gebruikt in Nederland en Vlaanderen: rechter hand bij partner op rechter schouder, linker hand er onder door: pols beetpakken. houdt er spanning op zodat je allebei naar achter kan hangen om er meer vaart in te houden. plaats de rechtervoeten met de buitenkant tegen elkaar in het midden. hier draai je omheen door met de linkervoet te 'steppen'.</div>
+<li><div>meest gebruikt in Nederland en Vlaanderen: rechter hand bij partner op rechter schouder, linker hand er onder door: pols beetpakken. houdt er spanning op zodat je allebei naar achter kan hangen om er meer vaart in te houden. plaats de rechtervoeten met de buitenkant tegen elkaar in het midden. hier draai je omheen door met de linkervoet te 'steppen'.</div>
 </li>
-<li><div class="li">meest gebruikt in Wallonië en Frankrijk: ga in halfopen danshouding staan, maar met de rechtervoeten aan de buitenkant tegen elkaar. 'Step' met de linkervoet erom heen. Op het einde van het tollen is het dan het makkelijkst om gewoon te openen en in deel C in open danshouding rond te wandelen.</div>
+<li><div>meest gebruikt in Wallonië en Frankrijk: ga in halfopen danshouding staan, maar met de rechtervoeten aan de buitenkant tegen elkaar. 'Step' met de linkervoet erom heen. Op het einde van het tollen is het dan het makkelijkst om gewoon te openen en in deel C in open danshouding rond te wandelen.</div>
 </li>
 </ul>
 </li>
-<li><div class="li">C: rechterhanden hoog (dame houdt rekening met de armlengte van de heer), linkerhanden op heuphoogte </div>
+<li><div>C: rechterhanden hoog (dame houdt rekening met de armlengte van de heer), linkerhanden op heuphoogte </div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
-<ul>
-<li><div class="li">Jezelf na met zn allen naar binnen te zijn gelopen laten draaien</div>
-</li>
-<li><div class="li">De 2 personen naast je draaien tijdens naar binnen lopen (ooit maar 1 keer op filmpje gezien)</div>
-</li>
-<li class="level1 node"><div class="li">heren doen leuke dingen als ze in midden komen</div>
-<ul>
-<li><div class="li">Hi5</div>
-</li>
-<li><div class="li">Springen met de borst tegen elkaar aan</div>
-</li>
-<li><div class="li">Ruilen van plek met een andere heer</div>
-</li>
-<li><div class="li">Bokje springen </div>
-</li>
-</ul>
-</li>
-<li><div class="li">dames kunnen dit ook doen</div>
-</li>
-<li><div class="li">In C-deel</div>
-</li>
-<li><div class="li">Tijdens het draaien elkaar bij het middel vastpakken voor snellere kleinere draaicirkel. </div>
-</li>
-</ul>
-
-</div>
-
-<h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h4 id="variaties">Variaties</h4>
 <div>
 <ul>
-<li><div class="li">Bladmuziek <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101">Tovercirkel</a>:   </div>
+<li><div>Jezelf na met zn allen naar binnen te zijn gelopen laten draaien</div>
 </li>
-<li><div class="li">Opname <a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101">Tovercirkel</a>: </div>
+<li><div>De 2 personen naast je draaien tijdens naar binnen lopen (ooit maar 1 keer op filmpje gezien)</div>
 </li>
-</ul>
+<li class="node"><div>heren doen leuke dingen als ze in midden komen</div>
 <ul>
-<li><div class="li">Cercle circassien</div>
+<li><div>Hi5</div>
+</li>
+<li><div>Springen met de borst tegen elkaar aan</div>
+</li>
+<li><div>Ruilen van plek met een andere heer</div>
+</li>
+<li><div>Bokje springen </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/-G0zatPjrh4" width="425"></iframe><ul>
-<li><div class="li">Double D op de Elf Fantasy Fair (workshop van Wen en Emelie)</div>
+</li>
+<li><div>dames kunnen dit ook doen</div>
+</li>
+<li><div>In C-deel</div>
+</li>
+<li><div>Tijdens het draaien elkaar bij het middel vastpakken voor snellere kleinere draaicirkel. </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/0GK8_DS5ZMg" width="425"></iframe>
+
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="BFdances.html#tovercirkel" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#tovercirkel">Celtic Bompa Circassian Circle</a></div>
+<li><div>Bladmuziek <a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101">Tovercirkel</a>:   </div>
+</li>
+<li><div>Opname <a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/101">Tovercirkel</a>: </div>
+</li>
+</ul>
+<ul>
+<li><div>Cercle circassien</div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/-G0zatPjrh4" width="425"></iframe><ul>
+<li><div>Double D op de Elf Fantasy Fair (workshop van Wen en Emelie)</div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/0GK8_DS5ZMg" width="425"></iframe>
+</div>
+
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
+<div>
+<ul>
+<li><div><a href="BFdances.html#tovercirkel" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#tovercirkel">Celtic Bompa Circassian Circle</a></div>
 </li>
 </ul>
 
