--- a/source/web/dansen/fandango.html
+++ b/source/web/dansen/fandango.html
@@ -1,11 +1,11 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="fandango">Fandango</h3>
+<html><head></head><body><div>
+<h3 id="fandango">Fandango</h3>
 <div>
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 heer en dame tegenover elkaar
@@ -21,8 +21,8 @@ kleine kringetjes
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 Dans bestaat uit 4 delen.
