--- a/source/web/dansen/gavotte_des_montagnes.html
+++ b/source/web/dansen/gavotte_des_montagnes.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="gavotte_des_montagnes">Gavotte des Montagnes</h3>
+<html><head></head><body><div>
+<h3 id="gavotte_des_montagnes">Gavotte des Montagnes</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Snelle rijdans
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Als rij sta je hand in hand, waarbij je aanvankelijk je rechterarm over de linkerarm van je buurman/-vrouw kunt leggen (zoals in de hanterdro). Afhankelijk van de muziek en degene voorin de rij, die het tempo bepaalt, kunnen de armen meer los komen, waarbij ook met de armen gezwaaid kan worden op het ritme van de muziek.
@@ -21,8 +21,8 @@ Met je lichaam sta je een beetje gedraaid richting de voorste in de rij, om goed
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 Wandel- of looppas in het ritme van de muziek: links - rechts - links rechts links - rechts - links - rechts - hop (of niets).
@@ -38,13 +38,13 @@ Of gebruik dit als ezelsbruggetje: een, twee, in de maat, anders wordt de juffro
 
 </div>
 
-<h3 class="sectionedit4" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Bert Leemans en Jeroen Geerinck </div>
+<li><div>Bert Leemans en Jeroen Geerinck </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/ICEaGHf6a94" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/ICEaGHf6a94" width="425"></iframe>
 </div>
 
 </div>
