--- a/source/web/dansen/mazurka.html
+++ b/source/web/dansen/mazurka.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="mazurka">Mazurka</h3>
+<html><head></head><body><div>
+<h3 id="mazurka">Mazurka</h3>
 <div>
 
 <p>
@@ -8,101 +8,101 @@ Romantische parendans
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
-<a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html#half-open" title="nl:algemeen:danshouding">Half-open houding</a>, gewoon in paren over de dansvloer heen.
+<a href="doku.php﹖id=doku.php﹖id=nl﹕algemeen﹕danshouding.html#half-open" title="nl:algemeen:danshouding">Half-open houding</a>, gewoon in paren over de dansvloer heen.
 </p>
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
-<ul>
-<li><div class="li">De dame begint rechts, de heer links</div>
-</li>
-<li class="level1 node"><div class="li">De dans bestaat uit een afwisseling van een mazurka-maat en een wals-maat</div>
-<ul>
-<li><div class="li"><strong>Mazurka</strong>: 1-2-wacht</div>
-</li>
-<li><div class="li"><strong>Wals</strong>: 1-2-3 (heen en weer) </div>
-</li>
-</ul>
-</li>
-<li><div class="li">De wachtvoet wordt bij de volgende 1 weer neergezet </div>
-</li>
-</ul>
-
-</div>
-
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
-<ul>
-<li><div class="li">Bij de <em>wacht</em> wordt het gewicht stil gehouden boven het standbeen. Dit is heel belangrijk.</div>
-</li>
-<li><div class="li">Bij de <em>wacht</em> kun je wel lichtjes veren door het standbeen. </div>
-</li>
-</ul>
-
-</div>
-
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
-<ul>
-<li><div class="li">rustig rondjes linksom of rechtsom draaien</div>
-</li>
-<li><div class="li">naar voren of naar achteren lopen</div>
-</li>
-<li><div class="li">in plaats van 1-2-3 alleen een 1 maken, hier het gewicht echt op houden en zo de hele maat blijven</div>
-</li>
-<li><div class="li">in plaats van de 1-2-wacht alleen een 1 maken, hier het gewicht echt op houden en zo de hele maat blijven</div>
-</li>
-<li class="level1 node"><div class="li">in plaats van mazurka-wals-mazurka-wals andere variaties:</div>
-<ul>
-<li><div class="li">mazurka-mazurka-wals-wals</div>
-</li>
-<li><div class="li">mazurka-mazurka-mazurka-wals</div>
-</li>
-<li><div class="li">wat je voelt op basis van de muziek </div>
-</li>
-</ul>
-</li>
-<li><div class="li">zie het tweede onderstaande filmpje (van bert en nog iemand) voor inspiratie, daar worden zeer veel mooie variaties gedanst.</div>
-</li>
-</ul>
-
-</div>
-
-<h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h4 id="basis">Basis</h4>
 <div>
 <ul>
-<li><div class="li">Franse mazurka instructie</div>
+<li><div>De dame begint rechts, de heer links</div>
+</li>
+<li class="node"><div>De dans bestaat uit een afwisseling van een mazurka-maat en een wals-maat</div>
+<ul>
+<li><div><strong>Mazurka</strong>: 1-2-wacht</div>
+</li>
+<li><div><strong>Wals</strong>: 1-2-3 (heen en weer) </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/SOMAKkDINZU" width="425"></iframe><ul>
-<li><div class="li">Mazurka van Bert Leemans en Jeroen Geerinck, veel inspiratie voor variaties in de filmpjes: </div>
+</li>
+<li><div>De wachtvoet wordt bij de volgende 1 weer neergezet </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/a2O36J2rgdA" width="425"></iframe><iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/mXh0JmisAS4" width="425"></iframe><ul>
-<li><div class="li">Mazurka van Jet Zoon en Marjolijn Bloemmen </div>
-</li>
-</ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/yDkGhHhTJlk" width="425"></iframe><ul>
-<li><div class="li">Mazurka van onbekend op Damada 2008 </div>
-</li>
-</ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/v7Upg0GSpgU" width="425"></iframe>
+
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
+<h4 id="aanwijzingen">Aanwijzingen</h4>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="BFdances.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#mazurka">Celtic Bompa Mazurka</a></div>
+<li><div>Bij de <em>wacht</em> wordt het gewicht stil gehouden boven het standbeen. Dit is heel belangrijk.</div>
 </li>
-<li><div class="li"><a class="urlextern" href="Wattrelos20040131.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#mazurka">Celtic Bompa Workshop Mazurka Variaties door Bernard Coclet aantekeningen</a></div>
+<li><div>Bij de <em>wacht</em> kun je wel lichtjes veren door het standbeen. </div>
 </li>
-<li><div class="li"><a class="urlextern" href="Koen200403.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/Koen200403.html#mazurka">Celtic Bompa Workshop Mazurka door Koen aantekeningen</a></div>
+</ul>
+
+</div>
+
+<h4 id="variaties">Variaties</h4>
+<div>
+<ul>
+<li><div>rustig rondjes linksom of rechtsom draaien</div>
+</li>
+<li><div>naar voren of naar achteren lopen</div>
+</li>
+<li><div>in plaats van 1-2-3 alleen een 1 maken, hier het gewicht echt op houden en zo de hele maat blijven</div>
+</li>
+<li><div>in plaats van de 1-2-wacht alleen een 1 maken, hier het gewicht echt op houden en zo de hele maat blijven</div>
+</li>
+<li class="node"><div>in plaats van mazurka-wals-mazurka-wals andere variaties:</div>
+<ul>
+<li><div>mazurka-mazurka-wals-wals</div>
+</li>
+<li><div>mazurka-mazurka-mazurka-wals</div>
+</li>
+<li><div>wat je voelt op basis van de muziek </div>
+</li>
+</ul>
+</li>
+<li><div>zie het tweede onderstaande filmpje (van bert en nog iemand) voor inspiratie, daar worden zeer veel mooie variaties gedanst.</div>
+</li>
+</ul>
+
+</div>
+
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<div>
+<ul>
+<li><div>Franse mazurka instructie</div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/SOMAKkDINZU" width="425"></iframe><ul>
+<li><div>Mazurka van Bert Leemans en Jeroen Geerinck, veel inspiratie voor variaties in de filmpjes: </div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/a2O36J2rgdA" width="425"></iframe><iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/mXh0JmisAS4" width="425"></iframe><ul>
+<li><div>Mazurka van Jet Zoon en Marjolijn Bloemmen </div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/yDkGhHhTJlk" width="425"></iframe><ul>
+<li><div>Mazurka van onbekend op Damada 2008 </div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/v7Upg0GSpgU" width="425"></iframe>
+</div>
+
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
+<div>
+<ul>
+<li><div><a href="BFdances.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#mazurka">Celtic Bompa Mazurka</a></div>
+</li>
+<li><div><a href="Wattrelos20040131.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/Wattrelos20040131.html#mazurka">Celtic Bompa Workshop Mazurka Variaties door Bernard Coclet aantekeningen</a></div>
+</li>
+<li><div><a href="Koen200403.html#mazurka" rel="nofollow" title="http://celticbompa.4t.com/Koen200403.html#mazurka">Celtic Bompa Workshop Mazurka door Koen aantekeningen</a></div>
 </li>
 </ul>
 
