--- a/source/web/dansen/polka.html
+++ b/source/web/dansen/polka.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="polka">Polka</h3>
+<html><head></head><body><div>
+<h3 id="polka">Polka</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Springerige parendans
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Met z'n tweeën in half-open houding op een leeg plekje op de dansvloer.
@@ -17,8 +17,8 @@ Met z'n tweeën in half-open houding op een leeg plekje op de dansvloer.
 
 </div>
 
-<h4 class="sectionedit3" id="basis">Basis</h4>
-<div class="level4">
+<h4 id="basis">Basis</h4>
+<div>
 
 <p>
 Vrouw begint naar rechts, man naar links: 123 ter plaatse aan de ene kant, 123 ter plaatse aan de andere kant (op 1 kom je neer, op 2 veer je na, op 3 maak je je klaar voor een sprongetje).  Onderwijl kun je ronddraaien, waardoor je tegen de klok in gaat op de dansvloer. Na 4 maten kun je bijvoorbeeld 4 keer dezelfde kant op 'hupsen' zonder te draaien, dan wel draaien en weer 4 keer dezelfde kant op 'hupsen'.
@@ -26,8 +26,8 @@ Vrouw begint naar rechts, man naar links: 123 ter plaatse aan de ene kant, 123 t
 
 </div>
 
-<h4 class="sectionedit4" id="aanwijzingen">Aanwijzingen</h4>
-<div class="level4">
+<h4 id="aanwijzingen">Aanwijzingen</h4>
+<div>
 
 <p>
 Als je het nog niet zo goed kunt dat je in een rechte lijn de dansvloer tegen de klok in kunt rondgaan, blijf dan in het midden. Zodoende hinder je de meer ervaren dansparen niet.
@@ -35,40 +35,40 @@ Als je het nog niet zo goed kunt dat je in een rechte lijn de dansvloer tegen de
 
 </div>
 
-<h4 class="sectionedit5" id="variaties">Variaties</h4>
-<div class="level4">
+<h4 id="variaties">Variaties</h4>
+<div>
 
 <p>
 Heel veel, wees crea! Een kort lijstje:
 </p>
 <ul>
-<li><div class="li">Variaties in stijl: je kan de polka heel plat dansen (bijna niet springen) of net heel springerig </div>
+<li><div>Variaties in stijl: je kan de polka heel plat dansen (bijna niet springen) of net heel springerig </div>
 </li>
-<li><div class="li"> Variaties in plaats: de variaties van wals en scottisch zijn ook bruikbaar voor de polka. </div>
+<li><div> Variaties in plaats: de variaties van wals en scottisch zijn ook bruikbaar voor de polka. </div>
 </li>
-<li><div class="li">Variaties in ritme: je kan de polkapas afwisselen met de pas van deel B van de scottisch, liefst op het einde van een muzikaal deeltje. </div>
-</li>
-</ul>
-
-</div>
-
-<h3 class="sectionedit6" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
-<div>
-<ul>
-<li><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Bladmuziek Polka van Wim</a> (PDF en midi)   </div>
-</li>
-<li><div class="li"><a class="urlextern" href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Opname Polka van Wim</a>: </div>
+<li><div>Variaties in ritme: je kan de polkapas afwisselen met de pas van deel B van de scottisch, liefst op het einde van een muzikaal deeltje. </div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit7" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="BFdances.html#polka" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polka">Celtic Bompa Polka</a></div>
+<li><div><a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Bladmuziek Polka van Wim</a> (PDF en midi)   </div>
 </li>
-<li><div class="li"><a class="urlextern" href="http://www.folkroddels.be/artikels/3471.html" rel="nofollow" title="http://www.folkroddels.be/artikels/3471.html">Folkroddels.be: Juffrouw wil jij de polka leren</a> </div>
+<li><div><a href="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269" rel="nofollow" title="http://bladmuziek.dennisreidsma.nl/gonnagles/index.php/tunes/single/269">Opname Polka van Wim</a>: </div>
+</li>
+</ul>
+
+</div>
+
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
+<div>
+<ul>
+<li><div><a href="BFdances.html#polka" rel="nofollow" title="http://celticbompa.4t.com/BFdances.html#polka">Celtic Bompa Polka</a></div>
+</li>
+<li><div><a href="http://www.folkroddels.be/artikels/3471.html" rel="nofollow" title="http://www.folkroddels.be/artikels/3471.html">Folkroddels.be: Juffrouw wil jij de polka leren</a> </div>
 </li>
 </ul>
 
