--- a/source/web/dansen/polska_boda.html
+++ b/source/web/dansen/polska_boda.html
@@ -1,10 +1,10 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
-<h1 class="sectionedit1" id="dit_onderwerp_bestaat_nog_niet">Dit onderwerp bestaat nog niet</h1>
+<div>
+<h1 id="dit_onderwerp_bestaat_nog_niet">Dit onderwerp bestaat nog niet</h1>
 <div>
 
 <p>
