--- a/source/web/dansen/rondeau_en_couple.html
+++ b/source/web/dansen/rondeau_en_couple.html
@@ -1,9 +1,9 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
+<div>
 </div>
           
         
