--- a/source/web/dansen/tricot.html
+++ b/source/web/dansen/tricot.html
@@ -1,10 +1,10 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
-<h3 class="sectionedit1" id="tricot">TRICOT</h3>
+<div>
+<h3 id="tricot">TRICOT</h3>
 <div>
 
 <p>
