--- a/source/web/dansen/wals/wals_in_11_tijden.html
+++ b/source/web/dansen/wals/wals_in_11_tijden.html
@@ -1,10 +1,10 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
-<h3 class="sectionedit1" id="wals_in_11_tijden">Wals in 11 tijden</h3>
+<div>
+<h3 id="wals_in_11_tijden">Wals in 11 tijden</h3>
 <div>
 
 <p>
