--- a/source/web/dansen/wals/wals_in_14_tijden.html
+++ b/source/web/dansen/wals/wals_in_14_tijden.html
@@ -1,10 +1,10 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
-<h3 class="sectionedit1" id="wals_in_14_tijden">Wals in 14 tijden</h3>
+<div>
+<h3 id="wals_in_14_tijden">Wals in 14 tijden</h3>
 <div>
 
 <p>
@@ -13,21 +13,21 @@ Komt in het wild niet voor.
 
 </div>
 
-<h4 class="sectionedit2" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h4>
-<div class="level4">
+<h4 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h4>
+<div>
 
 <p>
 2 Walsen in 14 tijden (32333) door Eric Theze:
 </p>
 <ul>
-<li><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/musiques/vevy14tps.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/vevy14tps.mp3">Vévy</a></div>
+<li><div><a href="http://eric.theze.free.fr/musiques/vevy14tps.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/vevy14tps.mp3">Vévy</a></div>
 </li>
-<li><div class="li"><a class="urlextern" href="http://eric.theze.free.fr/musiques/dessinslydia.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/dessinslydia.mp3">Dessins</a></div>
+<li><div><a href="http://eric.theze.free.fr/musiques/dessinslydia.mp3" rel="nofollow" title="http://eric.theze.free.fr/musiques/dessinslydia.mp3">Dessins</a></div>
 </li>
 </ul>
 
 <p>
-(bron: <a class="urlextern" href="http://eric.theze.free.fr/scores.html" rel="nofollow" title="http://eric.theze.free.fr/scores.html">http://eric.theze.free.fr/scores.html</a>) 
+(bron: <a href="http://eric.theze.free.fr/scores.html" rel="nofollow" title="http://eric.theze.free.fr/scores.html">http://eric.theze.free.fr/scores.html</a>) 
 </p>
 
 </div>
