--- a/source/web/dansen/wals/wals_in_5_tijden.html
+++ b/source/web/dansen/wals/wals_in_5_tijden.html
@@ -1,5 +1,5 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="wals_in_5_tijden">Wals in 5 tijden</h3>
+<html><head></head><body><div>
+<h3 id="wals_in_5_tijden">Wals in 5 tijden</h3>
 <div>
 
 <p>
@@ -8,8 +8,8 @@ Een dans met 5 tellen in de maat.
 
 </div>
 
-<h4 class="sectionedit2" id="opstelling">Opstelling</h4>
-<div class="level4">
+<h4 id="opstelling">Opstelling</h4>
+<div>
 
 <p>
 Paren in gewone danshouding
@@ -27,9 +27,9 @@ Het ritme bestaat uit een combinatie van 3 tellen en 2 tellen.
 Er zijn twee varianten (bepaald door de muziek):
 </p>
 <ol>
-<li><div class="li">één-twee-drie + één-twee</div>
+<li><div>één-twee-drie + één-twee</div>
 </li>
-<li><div class="li">één-twee + één-twee-drie </div>
+<li><div>één-twee + één-twee-drie </div>
 </li>
 </ol>
 
@@ -37,36 +37,36 @@ Er zijn twee varianten (bepaald door de muziek):
 Hierbij geldt:
 </p>
 <ul>
-<li><div class="li">de “een-twee-drie” is de gewone wals-pas</div>
+<li><div>de “een-twee-drie” is de gewone wals-pas</div>
 </li>
-<li><div class="li">de “een-twee” is een dubbele voetwissel met desnoods weining draai of verplaatsing. </div>
-</li>
-</ul>
-
-</div>
-
-<h4 class="sectionedit3" id="variaties">Variaties</h4>
-<div class="level4">
-<ul>
-<li><div class="li">Je kunt nu een heel rondje draaien per maat (een halve op de walspas en een halve op de wisselpas). </div>
-</li>
-<li><div class="li">Je kunt nu ook een half rondje draaien per maat, en dus rustig vijf tellen hier over doen. </div>
+<li><div>de “een-twee” is een dubbele voetwissel met desnoods weining draai of verplaatsing. </div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit4" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h4 id="variaties">Variaties</h4>
 <div>
 <ul>
-<li><div class="li">Valse 5 temps instructie</div>
+<li><div>Je kunt nu een heel rondje draaien per maat (een halve op de walspas en een halve op de wisselpas). </div>
+</li>
+<li><div>Je kunt nu ook een half rondje draaien per maat, en dus rustig vijf tellen hier over doen. </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/LTW4X6qfz2w" width="425"></iframe><ul>
-<li><div class="li">Wals in 5 tijden (Bert Leemans en Jeroen Geerinck) </div>
+
+</div>
+
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<div>
+<ul>
+<li><div>Valse 5 temps instructie</div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/tqTzLUOpC7E" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/LTW4X6qfz2w" width="425"></iframe><ul>
+<li><div>Wals in 5 tijden (Bert Leemans en Jeroen Geerinck) </div>
+</li>
+</ul>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/tqTzLUOpC7E" width="425"></iframe>
 </div>
 
 </div>
