--- a/source/web/dansen/wals/wals_in_8_tijden.html
+++ b/source/web/dansen/wals/wals_in_8_tijden.html
@@ -1,14 +1,14 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
-<h3 class="sectionedit1" id="wals_in_8_tijden">Wals in 8 tijden</h3>
+<div>
+<h3 id="wals_in_8_tijden">Wals in 8 tijden</h3>
 <div>
 
 <p>
-Zie de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" title="nl:dansen:wals:wals_in_5_tijden">wals in 5 tijden</a>.
+Zie de <a href="doku.php﹖id=doku.php﹖id=nl﹕dansen﹕wals﹕wals_in_5_tijden.html" title="nl:dansen:wals:wals_in_5_tijden">wals in 5 tijden</a>.
 </p>
 
 <p>
@@ -19,23 +19,23 @@ Ook deze dans is opgebouwd uit een combinatie van walspassen en tweestapsdraaipa
 Er zijn de volgende tellingen mogelijk:
 </p>
 <ul>
-<li><div class="li">123 - 123 - 12</div>
+<li><div>123 - 123 - 12</div>
 </li>
-<li><div class="li">12 - 123 - 123</div>
+<li><div>12 - 123 - 123</div>
 </li>
-<li><div class="li">123 - 12 - 123 </div>
+<li><div>123 - 12 - 123 </div>
 </li>
 </ul>
 
 </div>
 
-<h3 class="sectionedit2" id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
+<h3 id="voorbeeld_muziekjes_en_filmpjes">Voorbeeld muziekjes en filmpjes</h3>
 <div>
 <ul>
-<li><div class="li">Wals in 8 tijden (123 - 12 - 123) door Eric Theze (boombalfestival 2009): </div>
+<li><div>Wals in 8 tijden (123 - 12 - 123) door Eric Theze (boombalfestival 2009): </div>
 </li>
 </ul>
-<iframe allowfullscreen="" class="vshare__none" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/eEkhL88ElRM" width="425"></iframe>
+<iframe allowfullscreen="" frameborder="0" height="350" scrolling="no" src="https://www.youtube.com/embed/eEkhL88ElRM" width="425"></iframe>
 </div>
 
 </div>
