--- a/source/web/events/boombalfestival.html
+++ b/source/web/events/boombalfestival.html
@@ -1,25 +1,25 @@
-<html><head></head><body><div class="dw-content">
-<h3 class="sectionedit1" id="boombal_festival">Boombal Festival</h3>
+<html><head></head><body><div>
+<h3 id="boombal_festival">Boombal Festival</h3>
 <div>
 
 <p>
-Boombal festival is een meerdaags festival georganiseerd door de organisatie <a class="wikilink2" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalstage.html" rel="nofollow" title="nl:organisaties:boombal">Boombal</a> uit België. Het festival wordt ieder jaar gehouden in Lovendegem rond eind Augustus.
-In de dagen voor het festival wordt de <a class="wikilink1" href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalstage.html" title="nl:event:boombalstage">Boombal Stage</a> georganiseerd waar in verschillende niveaus wordt les gegeven in balfolk.
+Boombal festival is een meerdaags festival georganiseerd door de organisatie <a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalstage.html" rel="nofollow" title="nl:organisaties:boombal">Boombal</a> uit België. Het festival wordt ieder jaar gehouden in Lovendegem rond eind Augustus.
+In de dagen voor het festival wordt de <a href="doku.php﹖id=doku.php﹖id=nl﹕event﹕boombalstage.html" title="nl:event:boombalstage">Boombal Stage</a> georganiseerd waar in verschillende niveaus wordt les gegeven in balfolk.
 </p>
 
 </div>
 
-<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="http://boombalfestival.be/" rel="nofollow" title="http://boombalfestival.be/">Officiële website</a></div>
+<li><div><a href="http://boombalfestival.be/" rel="nofollow" title="http://boombalfestival.be/">Officiële website</a></div>
 </li>
 </ul>
 
 </div>
 
-<h4 class="sectionedit3" id="referenties_en_bronnen">Referenties en bronnen</h4>
-<div class="level4">
+<h4 id="referenties_en_bronnen">Referenties en bronnen</h4>
+<div>
 
 </div>
 
