--- a/source/web/events/parkfest.html
+++ b/source/web/events/parkfest.html
@@ -1,10 +1,10 @@
-<html><head></head><body><article class="container" id="dokuwiki__content">
+<html><head></head><body><article class="container">
 
 
 
 
-<div class="dw-content">
-<h3 class="sectionedit1" id="parkfest">Parkfest</h3>
+<div>
+<h3 id="parkfest">Parkfest</h3>
 <div>
 
 <p>
@@ -12,7 +12,7 @@ Parkfest is een meerdaags festival voor folkmuziek uit Nederland, Vlaanderen, Fr
 </p>
 
 <p>
-In 2014 en 2015 werd Parkfest in het Philips de Jonghpark gehouden. In 2016 is het een indoor-evenement in het <a class="urlextern" href="http://www.tac.nu/" rel="nofollow" title="http://www.tac.nu/">Temporary Art Centre (TAC)</a> in Eindhoven. Overnachten kan in de slaapzaal en op een mini-camping voor de deur (in voorbereiding).
+In 2014 en 2015 werd Parkfest in het Philips de Jonghpark gehouden. In 2016 is het een indoor-evenement in het <a href="http://www.tac.nu/" rel="nofollow" title="http://www.tac.nu/">Temporary Art Centre (TAC)</a> in Eindhoven. Overnachten kan in de slaapzaal en op een mini-camping voor de deur (in voorbereiding).
 </p>
 
 <p>
@@ -21,12 +21,12 @@ Parkfest is de opvolger van International Folk Festival “Folkwoods” dat van 
 
 </div>
 
-<h3 class="sectionedit2" id="externe_pagina_s">Externe Pagina's</h3>
+<h3 id="externe_pagina_s">Externe Pagina's</h3>
 <div>
 <ul>
-<li><div class="li"><a class="urlextern" href="http://www.parkfest.nl/" rel="nofollow" title="http://www.parkfest.nl/">Officiële website</a></div>
+<li><div><a href="http://www.parkfest.nl/" rel="nofollow" title="http://www.parkfest.nl/">Officiële website</a></div>
 </li>
-<li><div class="li"><a class="urlextern" href="https://www.facebook.com/parkfesteindhoven/" rel="nofollow" title="https://www.facebook.com/parkfesteindhoven/">Officiële Facebookpagina</a></div>
+<li><div><a href="https://www.facebook.com/parkfesteindhoven/" rel="nofollow" title="https://www.facebook.com/parkfesteindhoven/">Officiële Facebookpagina</a></div>
 </li>
 </ul>
 
